--- a/andryoustreamdl/SubtitleEdit/Languages/ar-EG.xml
+++ b/andryoustreamdl/SubtitleEdit/Languages/ar-EG.xml
@@ -418,6 +418,146 @@ Email: mailto:nikse.dk@gmail.com</AboutText1>
   <Interjections>
     <Title>مداخلات</Title>
   </Interjections>
+  <LanguageNames>
+    <aaName>الأفارية</aaName>
+    <abName>الأبخازية</abName>
+    <afName>الأفريقانية</afName>
+    <amName>الأمهرية</amName>
+    <arName>العربية</arName>
+    <asName>الأسامية</asName>
+    <ayName>الأيمارا</ayName>
+    <azName>الأذربيجانية</azName>
+    <baName>الباشكيرية</baName>
+    <beName>البيلاروسية</beName>
+    <bgName>البلغارية</bgName>
+    <biName>البيسلامية</biName>
+    <bnName>البنغالية</bnName>
+    <boName>التبتية</boName>
+    <brName>البريتونية</brName>
+    <caName>الكتالانية</caName>
+    <coName>الكورسيكية</coName>
+    <csName>التشيكية</csName>
+    <cyName>الولزية</cyName>
+    <daName>الدنماركية</daName>
+    <deName>الألمانية</deName>
+    <dzName>الزونخاية</dzName>
+    <elName>اليونانية</elName>
+    <enName>الإنجليزية</enName>
+    <eoName>الإسبرانتو</eoName>
+    <esName>الإسبانية</esName>
+    <etName>الإستونية</etName>
+    <euName>لغة الباسك</euName>
+    <faName>الفارسية</faName>
+    <fiName>الفنلندية</fiName>
+    <fjName>الفيجية</fjName>
+    <foName>الفارويز</foName>
+    <frName>الفرنسية</frName>
+    <fyName>الفريزيان</fyName>
+    <gaName>الأيرلندية</gaName>
+    <gdName>الغيلية الأسكتلندية</gdName>
+    <glName>الجاليكية</glName>
+    <gnName>الجواراني</gnName>
+    <guName>الغوجاراتية</guName>
+    <haName>الهوسا</haName>
+    <heName>العبرية</heName>
+    <hiName>الهندية</hiName>
+    <hrName>الكرواتية</hrName>
+    <huName>الهنغارية</huName>
+    <hyName>الأرمينية</hyName>
+    <iaName>اللّغة الوسيطة</iaName>
+    <idName>الإندونيسية</idName>
+    <ieName>الإنترلينج</ieName>
+    <ikName>الإينبياك</ikName>
+    <isName>الأيسلاندية</isName>
+    <itName>الإيطالية</itName>
+    <iuName>الإينكتيتت</iuName>
+    <jaName>اليابانية</jaName>
+    <jvName>الجاوية</jvName>
+    <kaName>الجورجية</kaName>
+    <kkName>الكازاخستانية</kkName>
+    <klName>الكالاليست</klName>
+    <kmName>الخميرية</kmName>
+    <knName>الكانادا</knName>
+    <koName>الكورية</koName>
+    <ksName>الكشميرية</ksName>
+    <kuName>الكردية</kuName>
+    <kyName>القرغيزية</kyName>
+    <laName>اللاتينية</laName>
+    <lbName>اللوكسمبرجية</lbName>
+    <lnName>اللينجالا</lnName>
+    <loName>اللاوية</loName>
+    <ltName>اللتوانية</ltName>
+    <lvName>اللاتفية</lvName>
+    <mgName>المالاجاشية</mgName>
+    <miName>الماورية</miName>
+    <mkName>المقدونية</mkName>
+    <mlName>الماليالام</mlName>
+    <mnName>المنغولية</mnName>
+    <mrName>الماراثي</mrName>
+    <msName>لغة الملايو</msName>
+    <mtName>المالطية</mtName>
+    <myName>البورمية</myName>
+    <naName>النورو</naName>
+    <neName>النيبالية</neName>
+    <nlName>الهولندية</nlName>
+    <noName>النرويجية</noName>
+    <ocName>الأوكيتانية</ocName>
+    <omName>الأورومو</omName>
+    <orName>الأورييا</orName>
+    <paName>البنجابية</paName>
+    <plName>البولندية</plName>
+    <psName>البشتونية</psName>
+    <ptName>البرتغالية</ptName>
+    <quName>الكويتشوا</quName>
+    <rmName>الرومانشية</rmName>
+    <rnName>الرندي</rnName>
+    <roName>الرومانية</roName>
+    <ruName>الروسية</ruName>
+    <rwName>الكينيارواندا</rwName>
+    <saName>السنسكريتية</saName>
+    <sdName>السندية</sdName>
+    <sgName>السانجو</sgName>
+    <shName>صربية-كرواتية</shName>
+    <siName>السنهالية</siName>
+    <skName>السلوفاكية</skName>
+    <slName>السلوفانية</slName>
+    <smName>الساموائية</smName>
+    <snName>الشونا</snName>
+    <soName>الصومالية</soName>
+    <sqName>الألبانية</sqName>
+    <srName>الصربية</srName>
+    <ssName>السواتي</ssName>
+    <stName>السوتو الجنوبية</stName>
+    <suName>السوندانية</suName>
+    <svName>السويدية</svName>
+    <swName>السواحلية</swName>
+    <taName>التاميلية</taName>
+    <teName>التيلجو</teName>
+    <tgName>الطاجيكية</tgName>
+    <thName>التايلاندية</thName>
+    <tiName>التغرينية</tiName>
+    <tkName>التركمانية</tkName>
+    <tlName>التاغالوغية</tlName>
+    <tnName>التسوانية</tnName>
+    <toName>التونغية</toName>
+    <trName>التركية</trName>
+    <tsName>السونجا</tsName>
+    <ttName>التتارية</ttName>
+    <twName>التوي</twName>
+    <ugName>الأغورية</ugName>
+    <ukName>الأوكرانية</ukName>
+    <urName>الأردية</urName>
+    <uzName>الأوزبكية</uzName>
+    <viName>الفيتنامية</viName>
+    <voName>لغة الفولابوك</voName>
+    <woName>الولوف</woName>
+    <xhName>الخوسا</xhName>
+    <yiName>اليديشية</yiName>
+    <yoName>اليوروبية</yoName>
+    <zaName>الزهيونج</zaName>
+    <zhName>الصينية</zhName>
+    <zuName>الزولو</zuName>
+  </LanguageNames>
   <Main>
     <Menu>
       <File>
@@ -652,7 +792,6 @@ Email: mailto:nikse.dk@gmail.com</AboutText1>
     <BeforeVisualSync>Before visual sync</BeforeVisualSync>
     <VisualSyncPerformedOnSelectedLines>Visual sync performed on selected lines</VisualSyncPerformedOnSelectedLines>
     <VisualSyncPerformed>Visual sync performed</VisualSyncPerformed>
-    <ImportThisVobSubSubtitle>Import this VobSub subtitle?</ImportThisVobSubSubtitle>
     <FileXIsLargerThan10MB>File is larger than 10 MB: {0}</FileXIsLargerThan10MB>
     <ContinueAnyway>Continue anyway?</ContinueAnyway>
     <BeforeLoadOf>Before load of {0}</BeforeLoadOf>
@@ -858,7 +997,7 @@ Continue?</SubtitleAppendPrompt>
     <CaseSensitive>غلاف رقيق</CaseSensitive>
     <RegularExpression>التعبير المنتظم</RegularExpression>
     <LinesFoundX>{العثور على أسطر: {0</LinesFoundX>
-    <Delete>حذف</Delete>
+    <Remove>حذف</Remove>
     <Add>إضافة</Add>
     <Update>التحديث</Update>
     <Enabled>اتاحة</Enabled>
@@ -1042,7 +1181,6 @@ Continue?</SubtitleAppendPrompt>
     <Key>مفتاح</Key>
     <TextBox>مربع النص</TextBox>
     <UpdateShortcut>التحديث</UpdateShortcut>
-    <ShortcutIsNotValid>{الاختصار غير صالح : {0</ShortcutIsNotValid>
     <ToggleDockUndockOfVideoControls>تبديل حوض / إرساء ضوابط الفيديو</ToggleDockUndockOfVideoControls>
     <AdjustViaEndAutoStartAndGoToNext>عدل عن طريق موقع النهاية وإذهب إلى التالى</AdjustViaEndAutoStartAndGoToNext>
   </Settings>
