--- a/andryoustreamdl/SubtitleEdit/Languages/ca-ES.xml
+++ b/andryoustreamdl/SubtitleEdit/Languages/ca-ES.xml
@@ -2,7 +2,7 @@
 <Language Name="català">
   <General>
     <Title>Subtitle Edit</Title>
-    <Version>3.4.12</Version>
+    <Version>3.5.1</Version>
     <TranslatedBy>Traduït per Juansa</TranslatedBy>
     <CultureName>ca-ES</CultureName>
     <HelpFile />
@@ -717,6 +717,150 @@ Email: mailto:nikse.dk@gmail.com</AboutText1>
     <TotalNumberOfLinesX>Nombre total línies: {0:#,###,###}</TotalNumberOfLinesX>
     <Note>Nota: Fitxers deuen tenir ja el codis de temps correctes</Note>
   </JoinSubtitles>
+  <LanguageNames>
+    <NotSpecified>No especificat</NotSpecified>
+    <UnknownCodeX>Desconegut ({0})</UnknownCodeX>
+    <aaName>àfar</aaName>
+    <abName>abkhaz</abName>
+    <afName>afrikaans</afName>
+    <amName>amhàric</amName>
+    <arName>àrab</arName>
+    <asName>assamès</asName>
+    <ayName>aimara</ayName>
+    <azName>azerbaidjanès</azName>
+    <baName>baixkir</baName>
+    <beName>bielorús</beName>
+    <bgName>búlgar</bgName>
+    <bhName>Bihari</bhName>
+    <biName>bislama</biName>
+    <bnName>bengalí</bnName>
+    <boName>tibetà</boName>
+    <brName>bretó</brName>
+    <caName>català</caName>
+    <coName>cors</coName>
+    <csName>txec</csName>
+    <cyName>gal·lès</cyName>
+    <daName>danès</daName>
+    <deName>alemany</deName>
+    <dzName>dzongka</dzName>
+    <elName>grec</elName>
+    <enName>anglès</enName>
+    <eoName>esperanto</eoName>
+    <esName>espanyol</esName>
+    <etName>estonià</etName>
+    <euName>basc</euName>
+    <faName>persa</faName>
+    <fiName>finès</fiName>
+    <fjName>fijià</fjName>
+    <foName>feroès</foName>
+    <frName>francès</frName>
+    <fyName>frisó occidental</fyName>
+    <gaName>irlandès</gaName>
+    <gdName>gaèlic escocès</gdName>
+    <glName>gallec</glName>
+    <gnName>guaraní</gnName>
+    <guName>gujarati</guName>
+    <haName>haussa</haName>
+    <heName>hebreu</heName>
+    <hiName>hindi</hiName>
+    <hrName>croat</hrName>
+    <huName>hongarès</huName>
+    <hyName>armeni</hyName>
+    <iaName>interlingua</iaName>
+    <idName>indonesi</idName>
+    <ieName>interlingue</ieName>
+    <ikName>inupiak</ikName>
+    <isName>islandès</isName>
+    <itName>italià</itName>
+    <iuName>inuktitut</iuName>
+    <jaName>japonès</jaName>
+    <jvName>javanès</jvName>
+    <kaName>georgià</kaName>
+    <kkName>kazakh</kkName>
+    <klName>grenlandès</klName>
+    <kmName>khmer</kmName>
+    <knName>kannada</knName>
+    <koName>coreà</koName>
+    <ksName>caixmiri</ksName>
+    <kuName>kurd</kuName>
+    <kyName>kirguís</kyName>
+    <laName>llatí</laName>
+    <lbName>luxemburguès</lbName>
+    <lnName>lingala</lnName>
+    <loName>laosià</loName>
+    <ltName>lituà</ltName>
+    <lvName>letó</lvName>
+    <mgName>malgaix</mgName>
+    <miName>maori</miName>
+    <mkName>macedoni</mkName>
+    <mlName>malaiàlam</mlName>
+    <mnName>mongol</mnName>
+    <moName>Moldau</moName>
+    <mrName>marathi</mrName>
+    <msName>malai</msName>
+    <mtName>maltès</mtName>
+    <myName>birmà</myName>
+    <naName>nauruà</naName>
+    <neName>nepalès</neName>
+    <nlName>neerlandès</nlName>
+    <noName>noruec</noName>
+    <ocName>occità</ocName>
+    <omName>oromo</omName>
+    <orName>oriya</orName>
+    <paName>panjabi</paName>
+    <plName>polonès</plName>
+    <psName>paixtu</psName>
+    <ptName>portuguès</ptName>
+    <quName>quítxua</quName>
+    <rmName>retoromànic</rmName>
+    <rnName>rundi</rnName>
+    <roName>romanès</roName>
+    <ruName>rus</ruName>
+    <rwName>ruandès</rwName>
+    <saName>sànscrit</saName>
+    <sdName>sindhi</sdName>
+    <sgName>sango</sgName>
+    <shName>serbocroat</shName>
+    <siName>singalès</siName>
+    <skName>eslovac</skName>
+    <slName>eslovè</slName>
+    <smName>samoà</smName>
+    <snName>shona</snName>
+    <soName>somali</soName>
+    <sqName>albanès</sqName>
+    <srName>serbi</srName>
+    <ssName>swazi</ssName>
+    <stName>sotho meridional</stName>
+    <suName>sundanès</suName>
+    <svName>suec</svName>
+    <swName>suahili</swName>
+    <taName>tàmil</taName>
+    <teName>telugu</teName>
+    <tgName>tadjik</tgName>
+    <thName>tailandès</thName>
+    <tiName>tigrinya</tiName>
+    <tkName>turcman</tkName>
+    <tlName>tagal</tlName>
+    <tnName>setswana</tnName>
+    <toName>tongalès</toName>
+    <trName>turc</trName>
+    <tsName>tsonga</tsName>
+    <ttName>tàtar</ttName>
+    <twName>twi</twName>
+    <ugName>uigur</ugName>
+    <ukName>ucraïnès</ukName>
+    <urName>urdú</urName>
+    <uzName>uzbek</uzName>
+    <viName>vietnamita</viName>
+    <voName>volapük</voName>
+    <woName>wòlof</woName>
+    <xhName>xosa</xhName>
+    <yiName>jiddisch</yiName>
+    <yoName>ioruba</yoName>
+    <zaName>zhuang</zaName>
+    <zhName>xinès</zhName>
+    <zuName>zulu</zuName>
+  </LanguageNames>
   <Main>
     <Menu>
       <File>
@@ -836,6 +980,7 @@ Email: mailto:nikse.dk@gmail.com</AboutText1>
         <OpenDvd>Obri DVD...</OpenDvd>
         <ChooseAudioTrack>Escolliu pista d'audio</ChooseAudioTrack>
         <CloseVideo>Tanca fitxer de vídeo</CloseVideo>
+        <SetVideoOffset>Estableix offset de video...</SetVideoOffset>
         <ImportSceneChanges>Importa canvis d'escena</ImportSceneChanges>
         <RemoveSceneChanges>Suprimeix canvis d'escena</RemoveSceneChanges>
         <WaveformBatchGenerate>Fitxer de lots genera waveforms...</WaveformBatchGenerate>
@@ -1030,7 +1175,6 @@ Email: mailto:nikse.dk@gmail.com</AboutText1>
     <BeforeVisualSync>Abans sinc visual</BeforeVisualSync>
     <VisualSyncPerformedOnSelectedLines>Sinc visual realitzada a selecció de línies</VisualSyncPerformedOnSelectedLines>
     <VisualSyncPerformed>Sinc visual realitzada</VisualSyncPerformed>
-    <ImportThisVobSubSubtitle>Importa aquest subtítol VobSub?</ImportThisVobSubSubtitle>
     <FileXIsLargerThan10MB>Fitxer de més de 10 MB: {0}</FileXIsLargerThan10MB>
     <ContinueAnyway>Continua de tota manera?</ContinueAnyway>
     <BeforeLoadOf>Abans càrrega de {0}</BeforeLoadOf>
@@ -1345,7 +1489,7 @@ Email: mailto:nikse.dk@gmail.com</AboutText1>
     <CaseSensitive>Sensible majúscules</CaseSensitive>
     <RegularExpression>Expressió regular</RegularExpression>
     <LinesFoundX>S'han trobat: {0} línies</LinesFoundX>
-    <Delete>Suprimeix</Delete>
+    <Remove>Suprimeix</Remove>
     <Add>Afegeix</Add>
     <Update>Act&amp;ualitza</Update>
     <Enabled>Habilitat</Enabled>
@@ -1552,6 +1696,8 @@ Email: mailto:nikse.dk@gmail.com</AboutText1>
     <DirectShowDescription>quartz.dll en carpeta system32</DirectShowDescription>
     <MpcHc>MPC-HC</MpcHc>
     <MpcHcDescription>Media Player Classic - Home cinema</MpcHcDescription>
+    <MpvPlayer>mvp</MpvPlayer>
+    <MpvPlayerDescription>https://mpv.io/ - free, open source, and cross-platform media player</MpvPlayerDescription>
     <VlcMediaPlayer>VLC media player</VlcMediaPlayer>
     <VlcMediaPlayerDescription>libvlc.dll de VLC media player 1.1.0 o superior</VlcMediaPlayerDescription>
     <VlcBrowseToLabel>Ruta del VLC (Sols en cas d'emprar la versió portable de VLC)</VlcBrowseToLabel>
@@ -1635,7 +1781,6 @@ Email: mailto:nikse.dk@gmail.com</AboutText1>
     <Key>Tecla</Key>
     <TextBox>Quadre de text</TextBox>
     <UpdateShortcut>Actualització</UpdateShortcut>
-    <ShortcutIsNotValid>Drecera no vàlida: {0}</ShortcutIsNotValid>
     <ToggleDockUndockOfVideoControls>Alterna acoblament/desacoblament controls vídeo</ToggleDockUndockOfVideoControls>
     <CreateSetEndAddNewAndGoToNew>Estableix final, afegeix nou i vés al nou</CreateSetEndAddNewAndGoToNew>
     <AdjustViaEndAutoStartAndGoToNext>Ajustament via possició final i vés al següent</AdjustViaEndAutoStartAndGoToNext>
@@ -1693,7 +1838,7 @@ Email: mailto:nikse.dk@gmail.com</AboutText1>
     <SyntaxColorDurationIfTooSmall>Color durada massa curta</SyntaxColorDurationIfTooSmall>
     <SyntaxColorDurationIfTooLarge>Color durada massa llarga</SyntaxColorDurationIfTooLarge>
     <SyntaxColorTextIfTooLong>Color text massa llarg</SyntaxColorTextIfTooLong>
-    <SyntaxColorTextMoreThanXLines>Color text més línies de:</SyntaxColorTextMoreThanXLines>
+    <SyntaxColorTextMoreThanMaxLines>Color text més de {0} línies</SyntaxColorTextMoreThanMaxLines>
     <SyntaxColorOverlap>Color codi temps sobrepossat</SyntaxColorOverlap>
     <SyntaxErrorColor>Color error</SyntaxErrorColor>
     <GoToFirstSelectedLine>Vés a la primera línia seleccionada</GoToFirstSelectedLine>
@@ -1721,11 +1866,22 @@ Email: mailto:nikse.dk@gmail.com</AboutText1>
     <MainFileSaveAll>Desa-ho tot</MainFileSaveAll>
     <Miscellaneous>Misc.</Miscellaneous>
     <UseDoNotBreakAfterList>Empra no-trenques-després-de-llistar (per auto-br)</UseDoNotBreakAfterList>
+    <MicrosoftBingTranslator>Microsoft Bing Translator</MicrosoftBingTranslator>
+    <HowToSignUp>Com signar</HowToSignUp>
+    <ClientId>ID client</ClientId>
+    <ClientSecret>Secret client</ClientSecret>
   </Settings>
+  <SettingsMpv>
+    <Title>Configuració mvp</Title>
+    <DownloadMpv>Decàrrega lib mvp</DownloadMpv>
+    <DownloadMpvFailed>No pot descarregar-se mvp -proveu més tard!</DownloadMpvFailed>
+    <DownloadMpvOk>Ha estat descarregada la lib mvp i està llesta per a...</DownloadMpvOk>
+  </SettingsMpv>
   <SetVideoOffset>
     <Title>Estableix offset de vídeo</Title>
     <Description>Estableix offset de vídeo(subtítols no deuen seguir el temps real del vídeo, e.g. +10 hores)</Description>
     <RelativeToCurrentVideoPosition>Relatiu a la posició actual de vídeo</RelativeToCurrentVideoPosition>
+    <Reset>Reinicia</Reset>
   </SetVideoOffset>
   <ShowEarlierLater>
     <Title>Mostra selecció línies anterior/posterior</Title>
@@ -2055,6 +2211,16 @@ Email: mailto:nikse.dk@gmail.com</AboutText1>
     <Title>Estableix factor itàlica</Title>
     <Description>Ajusta el valor fins que l'estil del text siga normal i no itàlica. Vegeu que la imatge original deu ser itàlica.</Description>
   </VobSubOcrSetItalicFactor>
+  <Watermark>
+    <Title>Marca d'aigüa</Title>
+    <WatermarkX>Marca d'aigüa: {0}</WatermarkX>
+    <GenerateWatermarkTitle>Genera marca d'aigüa</GenerateWatermarkTitle>
+    <SpreadOverEntireSubtitle>Repartit pel subtítul</SpreadOverEntireSubtitle>
+    <CurrentLineOnlyX>Només a la línia actual: {0}</CurrentLineOnlyX>
+    <Generate>Genera</Generate>
+    <Remove>Suprimeix</Remove>
+    <BeforeWatermark>Abans de la marca d'aigüa</BeforeWatermark>
+  </Watermark>
   <Waveform>
     <ClickToAddWaveform>Clic afegeix ona wave</ClickToAddWaveform>
     <ClickToAddWaveformAndSpectrogram>Clic afegeix ona/espectrograma</ClickToAddWaveformAndSpectrogram>
