--- a/andryoustreamdl/SubtitleEdit/Languages/de-DE.xml
+++ b/andryoustreamdl/SubtitleEdit/Languages/de-DE.xml
@@ -2,7 +2,7 @@
 <Language Name="Deutsch">
   <General>
     <Title>Subtitle Edit</Title>
-    <Version>3.4.12</Version>
+    <Version>3.5.1</Version>
     <TranslatedBy>Übersetzt von Christoph Kitsche. Überarbeitet von Nobody.</TranslatedBy>
     <CultureName>de-DE</CultureName>
     <HelpFile />
@@ -451,7 +451,8 @@ Ist genügend Plattenspeicherplatz verfügbar?</WaveFileMalformed>
     <SavePremiereEdlAs>Premiere EDL Dateiname wählen</SavePremiereEdlAs>
     <SaveFcpAs>Final Cut Pro xml Dateiname wählen</SaveFcpAs>
     <SaveDostAs>DoStudio dost Dateiname wählen</SaveDostAs>
-    <SomeLinesWereTooLongX>Einige Zeilen sind zu lang: {0}</SomeLinesWereTooLongX>
+    <SomeLinesWereTooLongX>Einige Zeilen sind zu lang:
+{0}</SomeLinesWereTooLongX>
     <LineHeight>Zeilenhöhe</LineHeight>
     <BoxSingleLine>Box - Einzeilig</BoxSingleLine>
     <BoxMultiLine>Box - Mehrzeilig</BoxMultiLine>
@@ -686,6 +687,7 @@ Ist genügend Plattenspeicherplatz verfügbar?</WaveFileMalformed>
     <Frames>Bilder</Frames>
     <Seconds>Sekunden</Seconds>
     <Milliseconds>Millisekunden</Milliseconds>
+    <GetSceneChangesWithFfmpeg>Szenenwechsel mit FFmpeg erstellen</GetSceneChangesWithFfmpeg>
   </ImportSceneChanges>
   <ImportText>
     <Title>Text importieren</Title>
@@ -724,6 +726,150 @@ Ist genügend Plattenspeicherplatz verfügbar?</WaveFileMalformed>
     <TotalNumberOfLinesX>Gesamte Zeilen: {0:#,###,###}</TotalNumberOfLinesX>
     <Note>Hinweis: Dateien sollten passenden Zeitstempel enthalten</Note>
   </JoinSubtitles>
+  <LanguageNames>
+    <NotSpecified>Unbestimmt</NotSpecified>
+    <UnknownCodeX>Unbekannt ({0})</UnknownCodeX>
+    <aaName>Afar</aaName>
+    <abName>Abchasisch</abName>
+    <afName>Afrikaans</afName>
+    <amName>Amharisch</amName>
+    <arName>Arabisch</arName>
+    <asName>Assamesisch</asName>
+    <ayName>Aymara</ayName>
+    <azName>Aserbaidschanisch</azName>
+    <baName>Baschkirisch</baName>
+    <beName>Weißrussisch</beName>
+    <bgName>Bulgarisch</bgName>
+    <bhName>Bihari</bhName>
+    <biName>Bislama</biName>
+    <bnName>Bengalisch</bnName>
+    <boName>Tibetisch</boName>
+    <brName>Bretonisch</brName>
+    <caName>Katalanisch</caName>
+    <coName>Korsisch</coName>
+    <csName>Tschechisch</csName>
+    <cyName>Walisisch</cyName>
+    <daName>Dänisch</daName>
+    <deName>Deutsch</deName>
+    <dzName>Dzongkha</dzName>
+    <elName>Griechisch</elName>
+    <enName>Englisch</enName>
+    <eoName>Esperanto</eoName>
+    <esName>Spanisch</esName>
+    <etName>Estnisch</etName>
+    <euName>Baskisch</euName>
+    <faName>Persisch</faName>
+    <fiName>Finnisch</fiName>
+    <fjName>Fidschi</fjName>
+    <foName>Färöisch</foName>
+    <frName>Französisch</frName>
+    <fyName>Westfriesisch</fyName>
+    <gaName>Irisch</gaName>
+    <gdName>Schottisches Gälisch</gdName>
+    <glName>Galizisch</glName>
+    <gnName>Guarani</gnName>
+    <guName>Gujarati</guName>
+    <haName>Haussa</haName>
+    <heName>Hebräisch</heName>
+    <hiName>Hindi</hiName>
+    <hrName>Kroatisch</hrName>
+    <huName>Ungarisch</huName>
+    <hyName>Armenisch</hyName>
+    <iaName>Interlingua</iaName>
+    <idName>Indonesisch</idName>
+    <ieName>Interlingue</ieName>
+    <ikName>Inupiak</ikName>
+    <isName>Isländisch</isName>
+    <itName>Italienisch</itName>
+    <iuName>Inuktitut</iuName>
+    <jaName>Japanisch</jaName>
+    <jvName>Javanisch</jvName>
+    <kaName>Georgisch</kaName>
+    <kkName>Kasachisch</kkName>
+    <klName>Grönländisch</klName>
+    <kmName>Khmer</kmName>
+    <knName>Kannada</knName>
+    <koName>Koreanisch</koName>
+    <ksName>Kaschmiri</ksName>
+    <kuName>Kurdisch</kuName>
+    <kyName>Kirgisisch</kyName>
+    <laName>Latein</laName>
+    <lbName>Luxemburgisch</lbName>
+    <lnName>Lingala</lnName>
+    <loName>Laotisch</loName>
+    <ltName>Litauisch</ltName>
+    <lvName>Lettisch</lvName>
+    <mgName>Madagassisch</mgName>
+    <miName>Maori</miName>
+    <mkName>Mazedonisch</mkName>
+    <mlName>Malayalam</mlName>
+    <mnName>Mongolisch</mnName>
+    <moName>Moldauisch</moName>
+    <mrName>Marathi</mrName>
+    <msName>Malaiisch</msName>
+    <mtName>Maltesisch</mtName>
+    <myName>Birmanisch</myName>
+    <naName>Nauruisch</naName>
+    <neName>Nepalesisch</neName>
+    <nlName>Niederländisch</nlName>
+    <noName>Norwegisch</noName>
+    <ocName>Okzitanisch</ocName>
+    <omName>Oromo</omName>
+    <orName>Oriya</orName>
+    <paName>Punjabi</paName>
+    <plName>Polnisch</plName>
+    <psName>Paschtu</psName>
+    <ptName>Portugiesisch</ptName>
+    <quName>Quechua</quName>
+    <rmName>Rätoromanisch</rmName>
+    <rnName>Rundi</rnName>
+    <roName>Rumänisch</roName>
+    <ruName>Russisch</ruName>
+    <rwName>Kinyarwanda</rwName>
+    <saName>Sanskrit</saName>
+    <sdName>Sindhi</sdName>
+    <sgName>Sango</sgName>
+    <shName>Serbo-Kroatisch</shName>
+    <siName>Singhalesisch</siName>
+    <skName>Slowakisch</skName>
+    <slName>Slowenisch</slName>
+    <smName>Samoanisch</smName>
+    <snName>Shona</snName>
+    <soName>Somali</soName>
+    <sqName>Albanisch</sqName>
+    <srName>Serbisch</srName>
+    <ssName>Swazi</ssName>
+    <stName>Süd-Sotho-Sprache</stName>
+    <suName>Sundanesisch</suName>
+    <svName>Schwedisch</svName>
+    <swName>Suaheli</swName>
+    <taName>Tamil</taName>
+    <teName>Telugu</teName>
+    <tgName>Tadschikisch</tgName>
+    <thName>Thailändisch</thName>
+    <tiName>Tigrinya</tiName>
+    <tkName>Turkmenisch</tkName>
+    <tlName>Tagalog</tlName>
+    <tnName>Tswana-Sprache</tnName>
+    <toName>Tongaisch</toName>
+    <trName>Türkisch</trName>
+    <tsName>Tsonga</tsName>
+    <ttName>Tatarisch</ttName>
+    <twName>Twi</twName>
+    <ugName>Uigurisch</ugName>
+    <ukName>Ukrainisch</ukName>
+    <urName>Urdu</urName>
+    <uzName>Usbekisch</uzName>
+    <viName>Vietnamesisch</viName>
+    <voName>Volapük</voName>
+    <woName>Wolof</woName>
+    <xhName>Xhosa</xhName>
+    <yiName>Jiddisch</yiName>
+    <yoName>Yoruba</yoName>
+    <zaName>Zhuang</zaName>
+    <zhName>Chinesisch</zhName>
+    <zuName>Zulu</zuName>
+  </LanguageNames>
   <Main>
     <Menu>
       <File>
@@ -843,6 +989,7 @@ Ist genügend Plattenspeicherplatz verfügbar?</WaveFileMalformed>
         <OpenDvd>DVD öffnen...</OpenDvd>
         <ChooseAudioTrack>Tonspur auswählen</ChooseAudioTrack>
         <CloseVideo>Videodatei schließen</CloseVideo>
+        <SetVideoOffset>Video Ausgleich einstellen...</SetVideoOffset>
         <ImportSceneChanges>Szenenänderungen importieren...</ImportSceneChanges>
         <RemoveSceneChanges>Szenenänderungen entfernen</RemoveSceneChanges>
         <WaveformBatchGenerate>Wellenforme im Stapel generieren...</WaveformBatchGenerate>
@@ -901,6 +1048,7 @@ Ist genügend Plattenspeicherplatz verfügbar?</WaveFileMalformed>
         <Find>Suchen</Find>
         <Replace>Ersetzen</Replace>
         <FixCommonErrors>Fehler korrigieren</FixCommonErrors>
+        <RemoveTextForHi>Untertitel für Hörgeschädigte entfernen</RemoveTextForHi>
         <VisualSync>Anpassung</VisualSync>
         <SpellCheck>Rechtschreibung</SpellCheck>
         <Settings>Einstellungen</Settings>
@@ -1037,7 +1185,6 @@ Ist genügend Plattenspeicherplatz verfügbar?</WaveFileMalformed>
     <BeforeVisualSync>Vor Visueller Anpassung</BeforeVisualSync>
     <VisualSyncPerformedOnSelectedLines>Visuelle Anpassung für ausgewählten Text ausgeführt</VisualSyncPerformedOnSelectedLines>
     <VisualSyncPerformed>Visuelle Anpassung ausgeführt</VisualSyncPerformed>
-    <ImportThisVobSubSubtitle>Diesen VobSub Untertitel importieren?</ImportThisVobSubSubtitle>
     <FileXIsLargerThan10MB>Datei ist größer als 10 MB: {0}</FileXIsLargerThan10MB>
     <ContinueAnyway>Trotzdem fortfahren?</ContinueAnyway>
     <BeforeLoadOf>Vor Laden von {0}</BeforeLoadOf>
@@ -1363,7 +1510,7 @@ Falls Sie diese Datei mit Subtitle Edit bearbeitet haben, dürfte eine Sicherung
     <CaseSensitive>Groß-/Kleinschreibung</CaseSensitive>
     <RegularExpression>Regulärer Ausdruck</RegularExpression>
     <LinesFoundX>Gefundene Zeilen: {0}</LinesFoundX>
-    <Delete>Löschen</Delete>
+    <Remove>Löschen</Remove>
     <Add>Hinzufügen</Add>
     <Update>&amp;Ändern</Update>
     <Enabled>Aktiv</Enabled>
@@ -1376,6 +1523,12 @@ Falls Sie diese Datei mit Subtitle Edit bearbeitet haben, dürfte eine Sicherung
     <Rules>Textersetzungsregeln</Rules>
     <MoveToTop>Zum Anfang</MoveToTop>
     <MoveToBottom>Zum Ende</MoveToBottom>
+    <MoveSelectedRulesToGroup>Ausgewählte Regeln verlegen</MoveSelectedRulesToGroup>
+    <Groups>Gruppen</Groups>
+    <RulesForGroupX>Regeln der Gruppe „{0}“</RulesForGroupX>
+    <GroupName>Gruppenname</GroupName>
+    <RenameGroup>Gruppenname ändern...</RenameGroup>
+    <NewGroup>Neue Gruppe...</NewGroup>
   </MultipleReplace>
   <NetworkChat>
     <Title>Chat</Title>
@@ -1534,6 +1687,7 @@ gleiche Untertiteldatei bearbeiten können (Zusammenarbeit)</Information>
     <DurationMinimumMilliseconds>Min. Länge, Millisekunden</DurationMinimumMilliseconds>
     <DurationMaximumMilliseconds>Max. Länge, Millisekunden</DurationMaximumMilliseconds>
     <MinimumGapMilliseconds>Min. Abstand zwischen Texten in Ms</MinimumGapMilliseconds>
+    <MaximumLines>Max. Zeilenanzahl</MaximumLines>
     <SubtitleFont>Untertitel Schriftart</SubtitleFont>
     <SubtitleFontSize>Untertitel Schriftgröße</SubtitleFontSize>
     <SubtitleBold>Fett</SubtitleBold>
@@ -1561,6 +1715,10 @@ gleiche Untertiteldatei bearbeiten können (Zusammenarbeit)</Information>
     <AutoBackupEveryMinute>Jede Minute</AutoBackupEveryMinute>
     <AutoBackupEveryFiveMinutes>Alle 5 Minuten</AutoBackupEveryFiveMinutes>
     <AutoBackupEveryFifteenMinutes>Alle 15 Minuten</AutoBackupEveryFifteenMinutes>
+    <AutoBackupDeleteAfter>Entfernen nach</AutoBackupDeleteAfter>
+    <AutoBackupDeleteAfterOneMonth>1 Monat</AutoBackupDeleteAfterOneMonth>
+    <AutoBackupDeleteAfterThreeMonths>3 Monate</AutoBackupDeleteAfterThreeMonths>
+    <AutoBackupDeleteAfterSixMonths>6 Monate</AutoBackupDeleteAfterSixMonths>
     <CheckForUpdates>Nach Aktualisierungen suchen</CheckForUpdates>
     <AllowEditOfOriginalSubtitle>Erlaube Bearbeitung des Original Untertitels</AllowEditOfOriginalSubtitle>
     <PromptDeleteLines>Nachfrage beim Löschen von Texten</PromptDeleteLines>
@@ -1643,6 +1801,7 @@ gleiche Untertiteldatei bearbeiten können (Zusammenarbeit)</Information>
     <FirstPlusX>Erstes + {0}</FirstPlusX>
     <LastMinusX>Letztes - {0}</LastMinusX>
     <FixCommonerrors>Fehler korrigieren</FixCommonerrors>
+    <RemoveTextForHi>Text für HI entfernen</RemoveTextForHi>
     <MergeLinesShorterThan>Verbinde Texte die kürzer sind als</MergeLinesShorterThan>
     <MusicSymbol>Musik Symbol</MusicSymbol>
     <MusicSymbolsToReplace>Zu ersetzende Musik Symbole (durch Leerzeichen trennen)</MusicSymbolsToReplace>
@@ -1657,7 +1816,6 @@ gleiche Untertiteldatei bearbeiten können (Zusammenarbeit)</Information>
     <Key>Taste</Key>
     <TextBox>Textbox</TextBox>
     <UpdateShortcut>Änderung</UpdateShortcut>
-    <ShortcutIsNotValid>Kurzbefehl ist ungültig: {0}</ShortcutIsNotValid>
     <ToggleDockUndockOfVideoControls>An-/Abdocken der Videosteuerung umschalten</ToggleDockUndockOfVideoControls>
     <CreateSetEndAddNewAndGoToNew>Ende setzen, ergänzen und dahin</CreateSetEndAddNewAndGoToNew>
     <AdjustViaEndAutoStartAndGoToNext>Über Endposition anpassen und weiter</AdjustViaEndAutoStartAndGoToNext>
@@ -1670,12 +1828,14 @@ gleiche Untertiteldatei bearbeiten können (Zusammenarbeit)</Information>
     <AdjustSetStartTimeKeepDuration>Startzeit anpassen, behalte Dauer</AdjustSetStartTimeKeepDuration>
     <AdjustSetEndAndOffsetTheRest>Ende setzen, Rest verschieben</AdjustSetEndAndOffsetTheRest>
     <AdjustSetEndAndOffsetTheRestAndGoToNext>Ende setzen, Rest verschieben und zum Nächsten</AdjustSetEndAndOffsetTheRestAndGoToNext>
+    <AdjustExtendCurrentSubtitle>Zum nächsten Text oder maximale Länge erweitern</AdjustExtendCurrentSubtitle>
     <MainCreateStartDownEndUp>Neue Startzeit mit Pfeil unten, Endzeit mit Pfeil hoch setzen</MainCreateStartDownEndUp>
     <MergeDialog>Dialoge verbinden ('-' einfügen)</MergeDialog>
     <GoToNext>Zum nächsten Text</GoToNext>
     <GoToPrevious>Zum vorherigen Text</GoToPrevious>
     <GoToCurrentSubtitleStart>Zum aktuellen Textstart</GoToCurrentSubtitleStart>
     <GoToCurrentSubtitleEnd>Zum aktuellen Textende</GoToCurrentSubtitleEnd>
+    <GoToNextSubtitleAndFocusVideo>Zum nächsten Text und Videoposition setzen</GoToNextSubtitleAndFocusVideo>
     <ToggleFocus>Zwischen Listenansicht und Textbox umschalten</ToggleFocus>
     <ToggleDialogDashes>Dialog Striche umschalten</ToggleDialogDashes>
     <Alignment>Ausrichtung (gewählte Zeilen)</Alignment>
@@ -1693,6 +1853,8 @@ gleiche Untertiteldatei bearbeiten können (Zusammenarbeit)</Information>
     <WaveformPlayNewSelectionEnd>Ende der Auswahl abspielen</WaveformPlayNewSelectionEnd>
     <WaveformPlayFirstSelectedSubtitle>Ersten gewählten Untertitel abspielen</WaveformPlayFirstSelectedSubtitle>
     <WaveformFocusListView>Listenansicht fokussieren</WaveformFocusListView>
+    <WaveformGoToNextSceneChange>Zum nächsten Szenenwechsel</WaveformGoToNextSceneChange>
+    <WaveformToggleSceneChange>Szenenwechsel umschalten</WaveformToggleSceneChange>
     <GoBack1Frame>Ein Bild zurück</GoBack1Frame>
     <GoForward1Frame>Ein Bild vor</GoForward1Frame>
     <GoBack100Milliseconds>100 ms zurück</GoBack100Milliseconds>
@@ -1701,7 +1863,9 @@ gleiche Untertiteldatei bearbeiten können (Zusammenarbeit)</Information>
     <GoForward500Milliseconds>500 ms vor</GoForward500Milliseconds>
     <GoBack1Second>Eine Sekunde zurück</GoBack1Second>
     <GoForward1Second>Eine Sekunde vor</GoForward1Second>
-    <TogglePlayPause>Apspielen/Pause</TogglePlayPause>
+    <GoBack5Seconds>Fünf Sekunden zurück</GoBack5Seconds>
+    <GoForward5Seconds>Fünf Sekunden vor</GoForward5Seconds>
+    <TogglePlayPause>Abspielen/Pause</TogglePlayPause>
     <Pause>Pause</Pause>
     <Fullscreen>Vollbild</Fullscreen>
     <CustomSearch1>Übersetzen, definierte Suche 1</CustomSearch1>
@@ -1715,7 +1879,7 @@ gleiche Untertiteldatei bearbeiten können (Zusammenarbeit)</Information>
     <SyntaxColorDurationIfTooSmall>Farbe Dauer zu kurz</SyntaxColorDurationIfTooSmall>
     <SyntaxColorDurationIfTooLarge>Farbe Dauer zu lang</SyntaxColorDurationIfTooLarge>
     <SyntaxColorTextIfTooLong>Farbe Text zu lang</SyntaxColorTextIfTooLong>
-    <SyntaxColorTextMoreThanXLines>Farbe Text mehr Zeilen als:</SyntaxColorTextMoreThanXLines>
+    <SyntaxColorTextMoreThanMaxLines>Farbe Text mehr als {0} Zeilen</SyntaxColorTextMoreThanMaxLines>
     <SyntaxColorOverlap>Farbe Zeitstempel Überlappung</SyntaxColorOverlap>
     <SyntaxErrorColor>Farbe Fehler</SyntaxErrorColor>
     <GoToFirstSelectedLine>Zur ersten ausgewählten Zeile</GoToFirstSelectedLine>
@@ -1760,6 +1924,8 @@ Bitte versuchen Sie es später noch einmal.</DownloadMpvFailed>
     <Title>Video Ausgleich</Title>
     <Description>Video Ausgleich einstellen (Falls Untertitel nicht der Videozeit folgen, z.B. +10 Sekunden)</Description>
     <RelativeToCurrentVideoPosition>Relativ zur aktuellen Videoposition</RelativeToCurrentVideoPosition>
+    <KeepTimeCodes>Zeitstempel erhalten (Video Ausgleich nicht hinzufügen)</KeepTimeCodes>
+    <Reset>Rücksetzen</Reset>
   </SetVideoOffset>
   <ShowEarlierLater>
     <Title>Ausgewählte Texte früher/später anzeigen</Title>
@@ -2091,6 +2257,17 @@ Bitte versuchen Sie es später noch einmal.</DownloadMpvFailed>
     <Title>Entkursivierungsfaktor setzen</Title>
     <Description>Anpassen bis zur aufrechten Schriftlage. Das Originalbild muss in Kursivschrift vorliegen.</Description>
   </VobSubOcrSetItalicFactor>
+  <Watermark>
+    <Title>Digitales Wasserzeichen</Title>
+    <WatermarkX>Wasserzeichen: {0}</WatermarkX>
+    <GenerateWatermarkTitle>Wasserzeichen erstellen</GenerateWatermarkTitle>
+    <SpreadOverEntireSubtitle>Über alle Texte ausdehnen</SpreadOverEntireSubtitle>
+    <CurrentLineOnlyX>Nur diesen Text: {0}</CurrentLineOnlyX>
+    <Generate>&amp;Erstellen</Generate>
+    <Remove>&amp;Löschen</Remove>
+    <BeforeWatermark>Vor Wasserzeichen</BeforeWatermark>
+    <ErrorUnicodeEncodingOnly>Zum Erstellen eines digitalen Wasserzeichens wird Unicode-Codierung benötigt.</ErrorUnicodeEncodingOnly>
+  </Watermark>
   <Waveform>
     <ClickToAddWaveform>Klicken um Wellenform hinzuzufügen</ClickToAddWaveform>
     <ClickToAddWaveformAndSpectrogram>Klicken um Wellenform/Spektogramm hinzuzufügen</ClickToAddWaveformAndSpectrogram>
@@ -2109,6 +2286,8 @@ Bitte versuchen Sie es später noch einmal.</DownloadMpvFailed>
     <ShowWaveformAndSpectrogram>Wellenform/Spektogramm anzeigen</ShowWaveformAndSpectrogram>
     <ShowWaveformOnly>Nur Wellenform anzeigen</ShowWaveformOnly>
     <ShowSpectrogramOnly>Nur Spektogramm anzeigen</ShowSpectrogramOnly>
+    <AddSceneChange>Szenenwechsel einfügen</AddSceneChange>
+    <RemoveSceneChange>Szenenwechsel entfernen</RemoveSceneChange>
     <GuessTimeCodes>Zeitstempel ermitteln...</GuessTimeCodes>
     <SeekSilence>Stille suchen...</SeekSilence>
   </Waveform>
