--- a/andryoustreamdl/SubtitleEdit/Languages/el-GR.xml
+++ b/andryoustreamdl/SubtitleEdit/Languages/el-GR.xml
@@ -2,7 +2,7 @@
 <Language Name="Ελληνικά">
   <General>
     <Title>Subtitle Edit</Title>
-    <Version>3.4.12</Version>
+    <Version>3.5.1</Version>
     <TranslatedBy>Μετάφραση από: CrazyRabbit - Κλεάνθης Μανωλόπουλος
 Σχόλια για τη μετάφραση στο: mailto:akis_manolopoulos@hotmail.com</TranslatedBy>
     <CultureName>el-GR</CultureName>
@@ -669,6 +669,146 @@ Email: mailto:nikse.dk@gmail.com</AboutText1>
     <Join>Ένωση</Join>
     <TotalNumberOfLinesX>Συνολικός αριθμός γραμμών: {0:#,###,###}</TotalNumberOfLinesX>
   </JoinSubtitles>
+  <LanguageNames>
+    <aaName>Αφάρ</aaName>
+    <abName>Αμπχαζικά</abName>
+    <afName>Αφρικάανς</afName>
+    <amName>Αμαρικά</amName>
+    <arName>Αραβικά</arName>
+    <asName>Ασαμεζικά</asName>
+    <ayName>Αϊμάρα</ayName>
+    <azName>Αζερμπαϊτζανικά</azName>
+    <baName>Μπασκίρ</baName>
+    <beName>Λευκορωσικά</beName>
+    <bgName>Βουλγαρικά</bgName>
+    <biName>Μπισλάμα</biName>
+    <bnName>Μπενγκάλι</bnName>
+    <boName>Θιβετιανά</boName>
+    <brName>Βρετονικά</brName>
+    <caName>Καταλανικά</caName>
+    <coName>Κορσικανικά</coName>
+    <csName>Τσεχικά</csName>
+    <cyName>Ουαλικά</cyName>
+    <daName>Δανικά</daName>
+    <deName>Γερμανικά</deName>
+    <dzName>Ντζόνγκχα</dzName>
+    <elName>Ελληνικά</elName>
+    <enName>Αγγλικά</enName>
+    <eoName>Εσπεράντο</eoName>
+    <esName>Ισπανικά</esName>
+    <etName>Εσθονικά</etName>
+    <euName>Βασκικά</euName>
+    <faName>Περσικά</faName>
+    <fiName>Φινλανδικά</fiName>
+    <fjName>Φίτζι</fjName>
+    <foName>Φαρόε</foName>
+    <frName>Γαλλικά</frName>
+    <fyName>Δυτικά Φριζιανά</fyName>
+    <gaName>Ιρλανδικά</gaName>
+    <gdName>Σκωτικά Κελτικά</gdName>
+    <glName>Γαλικιανά</glName>
+    <gnName>Γκουαρανί</gnName>
+    <guName>Γκουγιαράτι</guName>
+    <haName>Χάουσα</haName>
+    <heName>Εβραϊκά</heName>
+    <hiName>Χίντι</hiName>
+    <hrName>Κροατικά</hrName>
+    <huName>Ουγγρικά</huName>
+    <hyName>Αρμενικά</hyName>
+    <iaName>Ιντερλίνγκουα</iaName>
+    <idName>Ινδονησιακά</idName>
+    <ieName>Ιντερλίνγκουε</ieName>
+    <ikName>Ινουπιάκ</ikName>
+    <isName>Ισλανδικά</isName>
+    <itName>Ιταλικά</itName>
+    <iuName>Ινουκτιτούτ</iuName>
+    <jaName>Ιαπωνικά</jaName>
+    <jvName>Ιαβανεζικά</jvName>
+    <kaName>Γεωργιανά</kaName>
+    <kkName>Καζακικά</kkName>
+    <klName>Καλαάλισουτ</klName>
+    <kmName>Καμποτζιανά</kmName>
+    <knName>Κανάντα</knName>
+    <koName>Κορεατικά</koName>
+    <ksName>Κασμίρι</ksName>
+    <kuName>Κουρδικά</kuName>
+    <kyName>Κυργιζικά</kyName>
+    <laName>Λατινικά</laName>
+    <lbName>Λουξεμβουργιανά</lbName>
+    <lnName>Λινγκάλα</lnName>
+    <loName>Λαοθιανά</loName>
+    <ltName>Λιθουανικά</ltName>
+    <lvName>Λετονικά</lvName>
+    <mgName>Μαλαγάσι</mgName>
+    <miName>Μάορι</miName>
+    <mkName>Σλαβομακεδονικά</mkName>
+    <mlName>Μαλαγιαλάμ</mlName>
+    <mnName>Μογγολικά</mnName>
+    <mrName>Μαράθι</mrName>
+    <msName>Μαλάι</msName>
+    <mtName>Μαλτεζικά</mtName>
+    <myName>Βιρμανικά</myName>
+    <naName>Ναούρου</naName>
+    <neName>Νεπάλι</neName>
+    <nlName>Ολλανδικά</nlName>
+    <noName>Νορβηγικά</noName>
+    <ocName>Οκσιτανικά</ocName>
+    <omName>Ορόμο</omName>
+    <orName>Ορίγια</orName>
+    <paName>Παντζαπικά</paName>
+    <plName>Πολωνικά</plName>
+    <psName>Πάστο</psName>
+    <ptName>Πορτογαλικά</ptName>
+    <quName>Κετσούα</quName>
+    <rmName>Ρομανικά</rmName>
+    <rnName>Ρούντι</rnName>
+    <roName>Ρουμανικά</roName>
+    <ruName>Ρωσικά</ruName>
+    <rwName>Κινιαρβάντα</rwName>
+    <saName>Σανσκριτικά</saName>
+    <sdName>Σίντι</sdName>
+    <sgName>Σάνγκο</sgName>
+    <shName>Σερβοκροατικά</shName>
+    <siName>Σινχαλεζικά</siName>
+    <skName>Σλοβακικά</skName>
+    <slName>Σλοβενικά</slName>
+    <smName>Σαμόαν</smName>
+    <snName>Σχόνα</snName>
+    <soName>Σομάλι</soName>
+    <sqName>Αλβανικά</sqName>
+    <srName>Σερβικά</srName>
+    <ssName>Σουάτι</ssName>
+    <stName>Νότια Σόθο</stName>
+    <suName>Σουνδανικά</suName>
+    <svName>Σουηδικά</svName>
+    <swName>Σουαχίλι</swName>
+    <taName>Ταμίλ</taName>
+    <teName>Τελούγκου</teName>
+    <tgName>Τατζίκ</tgName>
+    <thName>Ταϊλανδικά</thName>
+    <tiName>Τιγκρίνυα</tiName>
+    <tkName>Τουρκμενικά</tkName>
+    <tlName>Ταγκαλόγκ</tlName>
+    <tnName>Τσιγουάνα</tnName>
+    <toName>Τονγκανικά</toName>
+    <trName>Τουρκικά</trName>
+    <tsName>Τσόνγκα</tsName>
+    <ttName>Τατάρ</ttName>
+    <twName>Τούι</twName>
+    <ugName>Ουιγουρικά</ugName>
+    <ukName>Ουκρανικά</ukName>
+    <urName>Ουρντού</urName>
+    <uzName>Ουζμπεκικά</uzName>
+    <viName>Βιετναμικά</viName>
+    <voName>Βόλαπικ</voName>
+    <woName>Γουόλοφ</woName>
+    <xhName>Ζόσα</xhName>
+    <yiName>Γίντις</yiName>
+    <yoName>Γιορούμπα</yoName>
+    <zaName>Ζουάνγκ</zaName>
+    <zhName>Κινεζικά</zhName>
+    <zuName>Ζουλού</zuName>
+  </LanguageNames>
   <Main>
     <Menu>
       <File>
@@ -971,7 +1111,6 @@ Email: mailto:nikse.dk@gmail.com</AboutText1>
     <BeforeVisualSync>Πριν από οπτικό συγχρονισμό</BeforeVisualSync>
     <VisualSyncPerformedOnSelectedLines>Εκτελέστηκε οπτικός συγχρονισμός στις επιλεγμένες γραμμές</VisualSyncPerformedOnSelectedLines>
     <VisualSyncPerformed>Εκτελέστηκε οπτικός συγχρονισμός</VisualSyncPerformed>
-    <ImportThisVobSubSubtitle>Εισαγωγή αυτού του υπότιτλου VobSub;</ImportThisVobSubSubtitle>
     <FileXIsLargerThan10MB>Το αρχείο {0} είναι μεγαλύτερο από 10 MB</FileXIsLargerThan10MB>
     <ContinueAnyway>Θέλετε να συνεχίσετε;</ContinueAnyway>
     <BeforeLoadOf>Πριν από τη φόρτωση του {0}</BeforeLoadOf>
@@ -1276,7 +1415,7 @@ Email: mailto:nikse.dk@gmail.com</AboutText1>
     <CaseSensitive>Διάκριση πεζών-κεφαλαίων</CaseSensitive>
     <RegularExpression>Τυπική έκφραση</RegularExpression>
     <LinesFoundX>Γραμμές που βρέθηκαν: {0}</LinesFoundX>
-    <Delete>Διαγραφή</Delete>
+    <Remove>Διαγραφή</Remove>
     <Add>Προσθήκη</Add>
     <Update>&amp;Ενημέρωση</Update>
     <Enabled>Ενεργοποίηση</Enabled>
@@ -1557,7 +1696,6 @@ Email: mailto:nikse.dk@gmail.com</AboutText1>
     <Key>Πλήκτρο</Key>
     <TextBox>Πλαίσιο κειμένου</TextBox>
     <UpdateShortcut>Ενημέρωση</UpdateShortcut>
-    <ShortcutIsNotValid>Η συντόμευση δεν είναι έγκυρη: {0}</ShortcutIsNotValid>
     <ToggleDockUndockOfVideoControls>Εναλλαγή αγκύστρωσης/απαγκύστρωσης των στοιχείων ελέγχου βίντεο</ToggleDockUndockOfVideoControls>
     <CreateSetEndAddNewAndGoToNew>Ορισμός τέλους, προσθήκη νέου και πηγαίνετε στο νέο</CreateSetEndAddNewAndGoToNew>
     <AdjustViaEndAutoStartAndGoToNext>Προσαρμογή μέσω τελικής θέσης και μετάβαση στο επόμενο</AdjustViaEndAutoStartAndGoToNext>
