--- a/andryoustreamdl/SubtitleEdit/Languages/es-ES.xml
+++ b/andryoustreamdl/SubtitleEdit/Languages/es-ES.xml
@@ -413,6 +413,146 @@ Email: mailto:nikse.dk@gmail.com</AboutText1>
   <Interjections>
     <Title>Interjecciones</Title>
   </Interjections>
+  <LanguageNames>
+    <aaName>afar</aaName>
+    <abName>abjasio</abName>
+    <afName>afrikáans</afName>
+    <amName>amárico</amName>
+    <arName>árabe</arName>
+    <asName>asamés</asName>
+    <ayName>aimara</ayName>
+    <azName>azerbaiyano</azName>
+    <baName>baskir</baName>
+    <beName>bielorruso</beName>
+    <bgName>búlgaro</bgName>
+    <biName>bislama</biName>
+    <bnName>bengalí</bnName>
+    <boName>tibetano</boName>
+    <brName>bretón</brName>
+    <caName>catalán</caName>
+    <coName>corso</coName>
+    <csName>checo</csName>
+    <cyName>galés</cyName>
+    <daName>danés</daName>
+    <deName>alemán</deName>
+    <dzName>dzongkha</dzName>
+    <elName>griego</elName>
+    <enName>inglés</enName>
+    <eoName>esperanto</eoName>
+    <esName>español</esName>
+    <etName>estonio</etName>
+    <euName>euskera</euName>
+    <faName>persa</faName>
+    <fiName>finés</fiName>
+    <fjName>fiyiano</fjName>
+    <foName>feroés</foName>
+    <frName>francés</frName>
+    <fyName>frisón occidental</fyName>
+    <gaName>irlandés</gaName>
+    <gdName>gaélico escocés</gdName>
+    <glName>gallego</glName>
+    <gnName>guaraní</gnName>
+    <guName>gujarati</guName>
+    <haName>hausa</haName>
+    <heName>hebreo</heName>
+    <hiName>hindi</hiName>
+    <hrName>croata</hrName>
+    <huName>húngaro</huName>
+    <hyName>armenio</hyName>
+    <iaName>interlingua</iaName>
+    <idName>indonesio</idName>
+    <ieName>interlingue</ieName>
+    <ikName>inupiaq</ikName>
+    <isName>islandés</isName>
+    <itName>italiano</itName>
+    <iuName>inuktitut</iuName>
+    <jaName>japonés</jaName>
+    <jvName>javanés</jvName>
+    <kaName>georgiano</kaName>
+    <kkName>kazajo</kkName>
+    <klName>groenlandés</klName>
+    <kmName>jemer</kmName>
+    <knName>canarés</knName>
+    <koName>coreano</koName>
+    <ksName>cachemiro</ksName>
+    <kuName>kurdo</kuName>
+    <kyName>kirguís</kyName>
+    <laName>latín</laName>
+    <lbName>luxemburgués</lbName>
+    <lnName>lingala</lnName>
+    <loName>laosiano</loName>
+    <ltName>lituano</ltName>
+    <lvName>letón</lvName>
+    <mgName>malgache</mgName>
+    <miName>maorí</miName>
+    <mkName>macedonio</mkName>
+    <mlName>malayalam</mlName>
+    <mnName>mongol</mnName>
+    <mrName>maratí</mrName>
+    <msName>malayo</msName>
+    <mtName>maltés</mtName>
+    <myName>birmano</myName>
+    <naName>nauruano</naName>
+    <neName>nepalí</neName>
+    <nlName>neerlandés</nlName>
+    <noName>noruego</noName>
+    <ocName>occitano</ocName>
+    <omName>oromo</omName>
+    <orName>oriya</orName>
+    <paName>panyabí</paName>
+    <plName>polaco</plName>
+    <psName>pastún</psName>
+    <ptName>portugués</ptName>
+    <quName>quechua</quName>
+    <rmName>retorrománico</rmName>
+    <rnName>kiroundi</rnName>
+    <roName>rumano</roName>
+    <ruName>ruso</ruName>
+    <rwName>kinyarwanda</rwName>
+    <saName>sánscrito</saName>
+    <sdName>sindhi</sdName>
+    <sgName>sango</sgName>
+    <shName>serbocroata</shName>
+    <siName>cingalés</siName>
+    <skName>eslovaco</skName>
+    <slName>esloveno</slName>
+    <smName>samoano</smName>
+    <snName>shona</snName>
+    <soName>somalí</soName>
+    <sqName>albanés</sqName>
+    <srName>serbio</srName>
+    <ssName>siswati</ssName>
+    <stName>sesotho meridional</stName>
+    <suName>sundanés</suName>
+    <svName>sueco</svName>
+    <swName>suajili</swName>
+    <taName>tamil</taName>
+    <teName>telugu</teName>
+    <tgName>tayiko</tgName>
+    <thName>tailandés</thName>
+    <tiName>tigriña</tiName>
+    <tkName>turcomano</tkName>
+    <tlName>tagalo</tlName>
+    <tnName>setchwana</tnName>
+    <toName>tongano</toName>
+    <trName>turco</trName>
+    <tsName>tsonga</tsName>
+    <ttName>tártaro</ttName>
+    <twName>twi</twName>
+    <ugName>uigur</ugName>
+    <ukName>ucraniano</ukName>
+    <urName>urdu</urName>
+    <uzName>uzbeko</uzName>
+    <viName>vietnamita</viName>
+    <voName>volapük</voName>
+    <woName>wolof</woName>
+    <xhName>xhosa</xhName>
+    <yiName>yídish</yiName>
+    <yoName>yoruba</yoName>
+    <zaName>zhuang</zaName>
+    <zhName>chino</zhName>
+    <zuName>zulú</zuName>
+  </LanguageNames>
   <Main>
     <Menu>
       <File>
@@ -648,7 +788,6 @@ Email: mailto:nikse.dk@gmail.com</AboutText1>
     <BeforeVisualSync>Sincronización visual antes</BeforeVisualSync>
     <VisualSyncPerformedOnSelectedLines>Sincronización visual aplicada a las líneas seleccionadas</VisualSyncPerformedOnSelectedLines>
     <VisualSyncPerformed>Sincronización visual realizada</VisualSyncPerformed>
-    <ImportThisVobSubSubtitle>¿Importar este subtítulo VobSub?</ImportThisVobSubSubtitle>
     <FileXIsLargerThan10MB>El archivo es mayor de 10 MB: {0}</FileXIsLargerThan10MB>
     <ContinueAnyway>¿Continuar de todas formas?</ContinueAnyway>
     <BeforeLoadOf>Antes de carga de {0}</BeforeLoadOf>
@@ -857,7 +996,7 @@ con el archivo de vídeo, al subtítulo actual cargado.
     <CaseSensitive>Sensible a mayúsculas</CaseSensitive>
     <RegularExpression>Expresión regular</RegularExpression>
     <LinesFoundX>Líneas encontradas: {0}</LinesFoundX>
-    <Delete>Eliminar</Delete>
+    <Remove>Eliminar</Remove>
     <Add>Añadir</Add>
     <Update>Act&amp;ualizar</Update>
     <Enabled>Habilitado</Enabled>
@@ -1042,7 +1181,6 @@ puede editar el mismo archivo de subtítulo (colaboración)</Information>
     <Key>Tecla</Key>
     <TextBox>Cuadro de texto</TextBox>
     <UpdateShortcut>Actualizar</UpdateShortcut>
-    <ShortcutIsNotValid>Acceso directo no válido: {0}</ShortcutIsNotValid>
     <ToggleDockUndockOfVideoControls>Cambiar acoplar/desacoplar controles de vídeo</ToggleDockUndockOfVideoControls>
     <AdjustViaEndAutoStartAndGoToNext>Ajustar posición final e ir al siguiente</AdjustViaEndAutoStartAndGoToNext>
     <AdjustSetStartAutoDurationAndGoToNext>Ajustar inicio de autoduración e ir al siguiente</AdjustSetStartAutoDurationAndGoToNext>
