--- a/andryoustreamdl/SubtitleEdit/Languages/fa-IR.xml
+++ b/andryoustreamdl/SubtitleEdit/Languages/fa-IR.xml
@@ -420,6 +420,146 @@ http://soft98.ir
   <Interjections>
     <Title>Interjections</Title>
   </Interjections>
+  <LanguageNames>
+    <aaName>آفاری</aaName>
+    <abName>آبخازی</abName>
+    <afName>آفریکانس</afName>
+    <amName>امهری</amName>
+    <arName>عربی</arName>
+    <asName>آسامی</asName>
+    <ayName>آیمارایی</ayName>
+    <azName>ترکی آذربایجانی</azName>
+    <baName>باشغیری</baName>
+    <beName>بلاروسی</beName>
+    <bgName>بلغاری</bgName>
+    <biName>بیسلاما</biName>
+    <bnName>بنگالی</bnName>
+    <boName>تبتی</boName>
+    <brName>برتون</brName>
+    <caName>کاتالان</caName>
+    <coName>کورسی</coName>
+    <csName>چکی</csName>
+    <cyName>ولزی</cyName>
+    <daName>دانمارکی</daName>
+    <deName>آلمانی</deName>
+    <dzName>جونخایی</dzName>
+    <elName>یونانی</elName>
+    <enName>انگلیسی</enName>
+    <eoName>اسپرانتو</eoName>
+    <esName>اسپانیایی</esName>
+    <etName>استونیایی</etName>
+    <euName>باسکی</euName>
+    <faName>فارسی</faName>
+    <fiName>فنلاندی</fiName>
+    <fjName>فیجیایی</fjName>
+    <foName>فارویی</foName>
+    <frName>فرانسوی</frName>
+    <fyName>فریزی غربی</fyName>
+    <gaName>ایرلندی</gaName>
+    <gdName>گیلی اسکاتلندی</gdName>
+    <glName>گالیسیایی</glName>
+    <gnName>گوارانی</gnName>
+    <guName>گجراتی</guName>
+    <haName>هوسیایی</haName>
+    <heName>عبری</heName>
+    <hiName>هندی</hiName>
+    <hrName>کروات</hrName>
+    <huName>مجاری</huName>
+    <hyName>ارمنی</hyName>
+    <iaName>میان‌زبان</iaName>
+    <idName>اندونزیایی</idName>
+    <ieName>اکسیدنتال</ieName>
+    <ikName>اینوپیک</ikName>
+    <isName>ایسلندی</isName>
+    <itName>ایتالیایی</itName>
+    <iuName>اینوکتیتوت</iuName>
+    <jaName>ژاپنی</jaName>
+    <jvName>جاوه‌ای</jvName>
+    <kaName>گرجی</kaName>
+    <kkName>قزاقی</kkName>
+    <klName>گرینلندی</klName>
+    <kmName>خمری</kmName>
+    <knName>کانارا</knName>
+    <koName>کره‌ای</koName>
+    <ksName>کشمیری</ksName>
+    <kuName>کردی</kuName>
+    <kyName>قرقیزی</kyName>
+    <laName>لاتین</laName>
+    <lbName>لوگزامبورگی</lbName>
+    <lnName>لینگالا</lnName>
+    <loName>لائوسی</loName>
+    <ltName>لیتوانیایی</ltName>
+    <lvName>لتونیایی</lvName>
+    <mgName>مالاگاسیایی</mgName>
+    <miName>مائوریایی</miName>
+    <mkName>مقدونی</mkName>
+    <mlName>مالایالامی</mlName>
+    <mnName>مغولی</mnName>
+    <mrName>مراتی</mrName>
+    <msName>مالایی</msName>
+    <mtName>مالتی</mtName>
+    <myName>برمه‌ای</myName>
+    <naName>نائورویی</naName>
+    <neName>نپالی</neName>
+    <nlName>هلندی</nlName>
+    <noName>نروژی</noName>
+    <ocName>اوکیتایی</ocName>
+    <omName>اورومویی</omName>
+    <orName>اوریه‌ای</orName>
+    <paName>پنجابی</paName>
+    <plName>لهستانی</plName>
+    <psName>پشتو</psName>
+    <ptName>پرتغالی</ptName>
+    <quName>کچوایی</quName>
+    <rmName>رومانش</rmName>
+    <rnName>روندیایی</rnName>
+    <roName>رومانیایی</roName>
+    <ruName>روسی</ruName>
+    <rwName>کینیارواندایی</rwName>
+    <saName>سانسکریت</saName>
+    <sdName>سندی</sdName>
+    <sgName>سانگو</sgName>
+    <shName>صرب و کرواتی</shName>
+    <siName>سینهالی</siName>
+    <skName>اسلواکی</skName>
+    <slName>اسلوونیایی</slName>
+    <smName>ساموآیی</smName>
+    <snName>شونایی</snName>
+    <soName>سومالیایی</soName>
+    <sqName>آلبانیایی</sqName>
+    <srName>صربی</srName>
+    <ssName>سوازیایی</ssName>
+    <stName>سوتویی جنوبی</stName>
+    <suName>سوندایی</suName>
+    <svName>سوئدی</svName>
+    <swName>سواحلی</swName>
+    <taName>تامیلی</taName>
+    <teName>تلوگویی</teName>
+    <tgName>تاجیکی</tgName>
+    <thName>تایلندی</thName>
+    <tiName>تیگرینیایی</tiName>
+    <tkName>ترکمنی</tkName>
+    <tlName>تاگالوگی</tlName>
+    <tnName>تسوانایی</tnName>
+    <toName>تونگایی</toName>
+    <trName>ترکی استانبولی</trName>
+    <tsName>تسونگایی</tsName>
+    <ttName>تاتاری</ttName>
+    <twName>توی‌یایی</twName>
+    <ugName>اویغوری</ugName>
+    <ukName>اوکراینی</ukName>
+    <urName>اردو</urName>
+    <uzName>ازبکی</uzName>
+    <viName>ویتنامی</viName>
+    <voName>ولاپوک</voName>
+    <woName>ولوفی</woName>
+    <xhName>خوسایی</xhName>
+    <yiName>یدی</yiName>
+    <yoName>یوروبایی</yoName>
+    <zaName>چوانگی</zaName>
+    <zhName>چینی</zhName>
+    <zuName>زولویی</zuName>
+  </LanguageNames>
   <Main>
     <Menu>
       <File>
@@ -658,7 +798,6 @@ http://soft98.ir
     <BeforeVisualSync>قبل از همگام بصری</BeforeVisualSync>
     <VisualSyncPerformedOnSelectedLines>همگام سازی در انتخاب خطوط</VisualSyncPerformedOnSelectedLines>
     <VisualSyncPerformed>همگام سازی انجام</VisualSyncPerformed>
-    <ImportThisVobSubSubtitle>؟VobSubواردات این نام</ImportThisVobSubSubtitle>
     <FileXIsLargerThan10MB>File is larger than 10 MB: {0}</FileXIsLargerThan10MB>
     <ContinueAnyway>هر حال ادامه میدهید؟</ContinueAnyway>
     <BeforeLoadOf>Before load of {0}</BeforeLoadOf>
@@ -867,7 +1006,7 @@ http://soft98.ir
     <CaseSensitive>مورد حقوقی حساس</CaseSensitive>
     <RegularExpression>بیان منظم</RegularExpression>
     <LinesFoundX>Lines found: {0}</LinesFoundX>
-    <Delete>حذف</Delete>
+    <Remove>حذف</Remove>
     <Add>اضافه کردن</Add>
     <Update>و بروز</Update>
     <Enabled>کوکی ها</Enabled>
@@ -1052,7 +1191,6 @@ http://soft98.ir
     <Key>Key</Key>
     <TextBox>Textbox</TextBox>
     <UpdateShortcut>Update</UpdateShortcut>
-    <ShortcutIsNotValid>Shortcut is not valid: {0}</ShortcutIsNotValid>
     <ToggleDockUndockOfVideoControls>کنترل حالت چسبان/غیرچسبان بودن کنترل های ویدئو</ToggleDockUndockOfVideoControls>
     <AdjustViaEndAutoStartAndGoToNext>میزان کردن توسط محل پایان و رفتن به ادامه</AdjustViaEndAutoStartAndGoToNext>
     <AdjustSetStartAutoDurationAndGoToNext>تنظیم شروع،مدت اتوماتیک و رفتن به ادامه</AdjustSetStartAutoDurationAndGoToNext>
