--- a/andryoustreamdl/SubtitleEdit/Languages/hr-HR.xml
+++ b/andryoustreamdl/SubtitleEdit/Languages/hr-HR.xml
@@ -2,7 +2,7 @@
 <Language Name="hrvatski">
   <General>
     <Title>Subtitle Edit</Title>
-    <Version>3.4.12</Version>
+    <Version>3.5.1</Version>
     <TranslatedBy>Prijevod: Jozo Marić &amp; diomed</TranslatedBy>
     <CultureName>hr-HR</CultureName>
     <HelpFile />
@@ -339,7 +339,7 @@ Napomena: Provjeri slobodan prostor prostor na disku.</WaveFileMalformed>
   <DvdSubRipChooseLanguage>
     <Title>Odabir jezika</Title>
     <ChooseLanguageStreamId>Izaberite željeni jezik ispod:</ChooseLanguageStreamId>
-    <UnknownLanguage>Nepoznat Jezik</UnknownLanguage>
+    <UnknownLanguage>Nepoznat jezik</UnknownLanguage>
     <SubtitleImageXofYAndWidthXHeight>Slika podnaslova ({0}/{1} – {2}×{3})</SubtitleImageXofYAndWidthXHeight>
     <SubtitleImage>Slika podnaslova</SubtitleImage>
   </DvdSubRipChooseLanguage>
@@ -712,6 +712,146 @@ Napomena: Provjeri slobodan prostor prostor na disku.</WaveFileMalformed>
     <TotalNumberOfLinesX>Ukupni broj linija: {0:#,###,###}</TotalNumberOfLinesX>
     <Note>Napomena: Datoteke već imaju točne vremenske kodove</Note>
   </JoinSubtitles>
+  <LanguageNames>
+    <aaName>afarski</aaName>
+    <abName>abhaski</abName>
+    <afName>afrikaans</afName>
+    <amName>amharski</amName>
+    <arName>arapski</arName>
+    <asName>asamski</asName>
+    <ayName>aymara</ayName>
+    <azName>azerbajdžanski</azName>
+    <baName>baškirski</baName>
+    <beName>bjeloruski</beName>
+    <bgName>bugarski</bgName>
+    <biName>bislama</biName>
+    <bnName>bengalski</bnName>
+    <boName>tibetanski</boName>
+    <brName>bretonski</brName>
+    <caName>katalonski</caName>
+    <coName>korzički</coName>
+    <csName>češki</csName>
+    <cyName>velški</cyName>
+    <daName>danski</daName>
+    <deName>njemački</deName>
+    <dzName>dzongkha</dzName>
+    <elName>grčki</elName>
+    <enName>engleski</enName>
+    <eoName>esperanto</eoName>
+    <esName>španjolski</esName>
+    <etName>estonski</etName>
+    <euName>baskijski</euName>
+    <faName>perzijski</faName>
+    <fiName>finski</fiName>
+    <fjName>fidžijski</fjName>
+    <foName>ferojski</foName>
+    <frName>francuski</frName>
+    <fyName>zapadnofrizijski</fyName>
+    <gaName>irski</gaName>
+    <gdName>škotski-galski</gdName>
+    <glName>galicijski</glName>
+    <gnName>guarani</gnName>
+    <guName>gudžaratski</guName>
+    <haName>hausa</haName>
+    <heName>hebrejski</heName>
+    <hiName>hindski</hiName>
+    <hrName>hrvatski</hrName>
+    <huName>mađarski</huName>
+    <hyName>armenski</hyName>
+    <iaName>interlingua</iaName>
+    <idName>indonezijski</idName>
+    <ieName>interligua</ieName>
+    <ikName>inupiaq</ikName>
+    <isName>islandski</isName>
+    <itName>talijanski</itName>
+    <iuName>inuktitut</iuName>
+    <jaName>japanski</jaName>
+    <jvName>javanski</jvName>
+    <kaName>gruzijski</kaName>
+    <kkName>kazaški</kkName>
+    <klName>kalaallisut</klName>
+    <kmName>kmerski</kmName>
+    <knName>kannadski</knName>
+    <koName>korejski</koName>
+    <ksName>kašmirski</ksName>
+    <kuName>kurdski</kuName>
+    <kyName>kirgiški</kyName>
+    <laName>latinski</laName>
+    <lbName>luksemburški</lbName>
+    <lnName>lingala</lnName>
+    <loName>laoski</loName>
+    <ltName>litavski</ltName>
+    <lvName>latvijski</lvName>
+    <mgName>malgaški</mgName>
+    <miName>maorski</miName>
+    <mkName>makedonski</mkName>
+    <mlName>malajalamski</mlName>
+    <mnName>mongolski</mnName>
+    <mrName>marathski</mrName>
+    <msName>malajski</msName>
+    <mtName>malteški</mtName>
+    <myName>burmanski</myName>
+    <naName>nauru</naName>
+    <neName>nepalski</neName>
+    <nlName>nizozemski</nlName>
+    <noName>norveški</noName>
+    <ocName>okcitanski</ocName>
+    <omName>oromski</omName>
+    <orName>orijski</orName>
+    <paName>pandžapski</paName>
+    <plName>poljski</plName>
+    <psName>paštu</psName>
+    <ptName>portugalski</ptName>
+    <quName>kečua</quName>
+    <rmName>romanš</rmName>
+    <rnName>rundi</rnName>
+    <roName>rumunjski</roName>
+    <ruName>ruski</ruName>
+    <rwName>kinyarwanda</rwName>
+    <saName>sanskrtski</saName>
+    <sdName>sindhi</sdName>
+    <sgName>sango</sgName>
+    <shName>srpsko-hrvatski</shName>
+    <siName>sinhaleški</siName>
+    <skName>slovački</skName>
+    <slName>slovenski</slName>
+    <smName>samoanski</smName>
+    <snName>shona</snName>
+    <soName>somalski</soName>
+    <sqName>albanski</sqName>
+    <srName>srpski</srName>
+    <ssName>svati</ssName>
+    <stName>sesotski</stName>
+    <suName>sundanski</suName>
+    <svName>švedski</svName>
+    <swName>svahili</swName>
+    <taName>tamilski</taName>
+    <teName>telugu</teName>
+    <tgName>tadžički</tgName>
+    <thName>tajlandski</thName>
+    <tiName>tigrinja</tiName>
+    <tkName>turkmenski</tkName>
+    <tlName>tagalog</tlName>
+    <tnName>cvana</tnName>
+    <toName>tonganski</toName>
+    <trName>turski</trName>
+    <tsName>tsonga</tsName>
+    <ttName>tatarski</ttName>
+    <twName>twi</twName>
+    <ugName>ujgurski</ugName>
+    <ukName>ukrajinski</ukName>
+    <urName>urdski</urName>
+    <uzName>uzbečki</uzName>
+    <viName>vijetnamski</viName>
+    <voName>volapük</voName>
+    <woName>wolof</woName>
+    <xhName>xhosa</xhName>
+    <yiName>jidiš</yiName>
+    <yoName>joruba</yoName>
+    <zaName>zhuang</zaName>
+    <zhName>kineski</zhName>
+    <zuName>zulu</zuName>
+  </LanguageNames>
   <Main>
     <Menu>
       <File>
@@ -1025,7 +1165,6 @@ Napomena: Provjeri slobodan prostor prostor na disku.</WaveFileMalformed>
     <BeforeVisualSync>Izvršeno vizualno usklađivanje</BeforeVisualSync>
     <VisualSyncPerformedOnSelectedLines>Izvršeno je vizualno usklađivanje na odabranim linijama</VisualSyncPerformedOnSelectedLines>
     <VisualSyncPerformed>Vizualno usklađivanje je izvršeno.</VisualSyncPerformed>
-    <ImportThisVobSubSubtitle>Uvezi ovaj Vobsub podnaslov?</ImportThisVobSubSubtitle>
     <FileXIsLargerThan10MB>Datoteka je veća od 10 MB: {0}</FileXIsLargerThan10MB>
     <ContinueAnyway>Ipak nastaviti?</ContinueAnyway>
     <BeforeLoadOf>Prije učitavanja {0}</BeforeLoadOf>
@@ -1344,7 +1483,7 @@ koji bi trebao biti usklađen s video datotekom.
     <CaseSensitive>&amp;Podudaranje</CaseSensitive>
     <RegularExpression>&amp;Normalan izraz</RegularExpression>
     <LinesFoundX>Pronađeno linija: {0}</LinesFoundX>
-    <Delete>Obriši</Delete>
+    <Remove>Obriši</Remove>
     <Add>&amp;Dodaj</Add>
     <Update>&amp;Ažuriraj</Update>
     <Enabled>Omogućeno</Enabled>
@@ -1632,7 +1771,6 @@ određeni podnaslov s drugim ljudima.</Information>
     <Key>Tipka:</Key>
     <TextBox>Polje za tekst</TextBox>
     <UpdateShortcut>Ažuriraj prečac</UpdateShortcut>
-    <ShortcutIsNotValid>Prečac nije ispravan: {0}</ShortcutIsNotValid>
     <ToggleDockUndockOfVideoControls>Zakači/otkači video kontrole</ToggleDockUndockOfVideoControls>
     <CreateSetEndAddNewAndGoToNew>Postavi kraj, dodaj novi i idi na novi</CreateSetEndAddNewAndGoToNew>
     <AdjustViaEndAutoStartAndGoToNext>Prilagodi preko završnog položaja i prijeđi na sljedeći</AdjustViaEndAutoStartAndGoToNext>
