--- a/andryoustreamdl/SubtitleEdit/Languages/ja-JP.xml
+++ b/andryoustreamdl/SubtitleEdit/Languages/ja-JP.xml
@@ -2,7 +2,7 @@
 <Language Name="日本語">
   <General>
     <Title>Subtitle Edit</Title>
-    <Version>3.4.12</Version>
+    <Version>3.5.1</Version>
     <TranslatedBy>Nardog</TranslatedBy>
     <CultureName>ja-JP</CultureName>
     <HelpFile />
@@ -530,6 +530,146 @@ C# ソース コードは https://github.com/SubtitleEdit/subtitleedit にあり
     <Join>行の合計数: {</Join>
     <TotalNumberOfLinesX>行の合計数: {0:#,###,###}</TotalNumberOfLinesX>
   </JoinSubtitles>
+  <LanguageNames>
+    <aaName>アファル語</aaName>
+    <abName>アブハズ語</abName>
+    <afName>アフリカーンス語</afName>
+    <amName>アムハラ語</amName>
+    <arName>アラビア語</arName>
+    <asName>アッサム語</asName>
+    <ayName>アイマラ語</ayName>
+    <azName>アゼルバイジャン語</azName>
+    <baName>バシキール語</baName>
+    <beName>ベラルーシ語</beName>
+    <bgName>ブルガリア語</bgName>
+    <biName>ビスラマ語</biName>
+    <bnName>ベンガル語</bnName>
+    <boName>チベット語</boName>
+    <brName>ブルトン語</brName>
+    <caName>カタロニア語</caName>
+    <coName>コルシカ語</coName>
+    <csName>チェコ語</csName>
+    <cyName>ウェールズ語</cyName>
+    <daName>デンマーク語</daName>
+    <deName>ドイツ語</deName>
+    <dzName>ゾンカ語</dzName>
+    <elName>ギリシャ語</elName>
+    <enName>英語</enName>
+    <eoName>エスペラント語</eoName>
+    <esName>スペイン語</esName>
+    <etName>エストニア語</etName>
+    <euName>バスク語</euName>
+    <faName>ペルシア語</faName>
+    <fiName>フィンランド語</fiName>
+    <fjName>フィジー語</fjName>
+    <foName>フェロー語</foName>
+    <frName>フランス語</frName>
+    <fyName>西フリジア語</fyName>
+    <gaName>アイルランド語</gaName>
+    <gdName>スコットランド・ゲール語</gdName>
+    <glName>ガリシア語</glName>
+    <gnName>グアラニー語</gnName>
+    <guName>グジャラート語</guName>
+    <haName>ハウサ語</haName>
+    <heName>ヘブライ語</heName>
+    <hiName>ヒンディー語</hiName>
+    <hrName>クロアチア語</hrName>
+    <huName>ハンガリー語</huName>
+    <hyName>アルメニア語</hyName>
+    <iaName>インターリングア</iaName>
+    <idName>インドネシア語</idName>
+    <ieName>インターリング</ieName>
+    <ikName>イヌピアック語</ikName>
+    <isName>アイスランド語</isName>
+    <itName>イタリア語</itName>
+    <iuName>イヌクウティトット語</iuName>
+    <jaName>日本語</jaName>
+    <jvName>ジャワ語</jvName>
+    <kaName>ジョージア語</kaName>
+    <kkName>カザフ語</kkName>
+    <klName>グリーンランド語</klName>
+    <kmName>クメール語</kmName>
+    <knName>カンナダ語</knName>
+    <koName>韓国語</koName>
+    <ksName>カシミール語</ksName>
+    <kuName>クルド語</kuName>
+    <kyName>キルギス語</kyName>
+    <laName>ラテン語</laName>
+    <lbName>ルクセンブルク語</lbName>
+    <lnName>リンガラ語</lnName>
+    <loName>ラオ語</loName>
+    <ltName>リトアニア語</ltName>
+    <lvName>ラトビア語</lvName>
+    <mgName>マダガスカル語</mgName>
+    <miName>マオリ語</miName>
+    <mkName>マケドニア語</mkName>
+    <mlName>マラヤーラム語</mlName>
+    <mnName>モンゴル語</mnName>
+    <mrName>マラーティー語</mrName>
+    <msName>マレー語</msName>
+    <mtName>マルタ語</mtName>
+    <myName>ビルマ語</myName>
+    <naName>ナウル語</naName>
+    <neName>ネパール語</neName>
+    <nlName>オランダ語</nlName>
+    <noName>ノルウェー語</noName>
+    <ocName>オック語</ocName>
+    <omName>オロモ語</omName>
+    <orName>オリヤー語</orName>
+    <paName>パンジャブ語</paName>
+    <plName>ポーランド語</plName>
+    <psName>パシュトゥー語</psName>
+    <ptName>ポルトガル語</ptName>
+    <quName>ケチュア語</quName>
+    <rmName>ロマンシュ語</rmName>
+    <rnName>ルンディ語</rnName>
+    <roName>ルーマニア語</roName>
+    <ruName>ロシア語</ruName>
+    <rwName>ルワンダ語</rwName>
+    <saName>サンスクリット語</saName>
+    <sdName>シンド語</sdName>
+    <sgName>サンゴ語</sgName>
+    <shName>セルボ・クロアチア語</shName>
+    <siName>シンハラ語</siName>
+    <skName>スロバキア語</skName>
+    <slName>スロベニア語</slName>
+    <smName>サモア語</smName>
+    <snName>ショナ語</snName>
+    <soName>ソマリ語</soName>
+    <sqName>アルバニア語</sqName>
+    <srName>セルビア語</srName>
+    <ssName>スワジ語</ssName>
+    <stName>南部ソト語</stName>
+    <suName>スンダ語</suName>
+    <svName>スウェーデン語</svName>
+    <swName>スワヒリ語</swName>
+    <taName>タミル語</taName>
+    <teName>テルグ語</teName>
+    <tgName>タジク語</tgName>
+    <thName>タイ語</thName>
+    <tiName>ティグリニア語</tiName>
+    <tkName>トルクメン語</tkName>
+    <tlName>タガログ語</tlName>
+    <tnName>ツワナ語</tnName>
+    <toName>トンガ語</toName>
+    <trName>トルコ語</trName>
+    <tsName>ツォンガ語</tsName>
+    <ttName>タタール語</ttName>
+    <twName>トウィ語</twName>
+    <ugName>ウイグル語</ugName>
+    <ukName>ウクライナ語</ukName>
+    <urName>ウルドゥー語</urName>
+    <uzName>ウズベク語</uzName>
+    <viName>ベトナム語</viName>
+    <voName>ヴォラピュク語</voName>
+    <woName>ウォロフ語</woName>
+    <xhName>コサ語</xhName>
+    <yiName>イディッシュ語</yiName>
+    <yoName>ヨルバ語</yoName>
+    <zaName>チワン語</zaName>
+    <zhName>中国語</zhName>
+    <zuName>ズールー語</zuName>
+  </LanguageNames>
   <Main>
     <Menu>
       <File>
@@ -808,7 +948,6 @@ C# ソース コードは https://github.com/SubtitleEdit/subtitleedit にあり
     <BeforeVisualSync>視覚同期前</BeforeVisualSync>
     <VisualSyncPerformedOnSelectedLines>視覚同期が選択された行で実行されました</VisualSyncPerformedOnSelectedLines>
     <VisualSyncPerformed>視覚同期が実行されました</VisualSyncPerformed>
-    <ImportThisVobSubSubtitle>この VobSub 字幕をインポートしますか?</ImportThisVobSubSubtitle>
     <FileXIsLargerThan10MB>ファイルが 10 MB より大きいです: {0}</FileXIsLargerThan10MB>
     <ContinueAnyway>そのまま続行しますか?</ContinueAnyway>
     <BeforeLoadOf>{0} の読み込み前</BeforeLoadOf>
@@ -1053,7 +1192,7 @@ C# ソース コードは https://github.com/SubtitleEdit/subtitleedit にあり
     <CaseSensitive>大小文字区別</CaseSensitive>
     <RegularExpression>正規表現</RegularExpression>
     <LinesFoundX>見つかった行: {0}</LinesFoundX>
-    <Delete>削除</Delete>
+    <Remove>削除</Remove>
     <Add>追加</Add>
     <Update>更新(&amp;U)</Update>
     <Enabled>有効</Enabled>
@@ -1292,7 +1431,6 @@ C# ソース コードは https://github.com/SubtitleEdit/subtitleedit にあり
     <Key>キー</Key>
     <TextBox>テキストボックス</TextBox>
     <UpdateShortcut>更新</UpdateShortcut>
-    <ShortcutIsNotValid>ショートカットが有効ではありません: {0}</ShortcutIsNotValid>
     <ToggleDockUndockOfVideoControls>ビデオ コントロールのドック/ドック解除の切り替え</ToggleDockUndockOfVideoControls>
     <CreateSetEndAddNewAndGoToNew>終了を設定して新規へ</CreateSetEndAddNewAndGoToNew>
     <AdjustViaEndAutoStartAndGoToNext>終了位置から調整して次へ</AdjustViaEndAutoStartAndGoToNext>
