--- a/andryoustreamdl/SubtitleEdit/Languages/nb-NO.xml
+++ b/andryoustreamdl/SubtitleEdit/Languages/nb-NO.xml
@@ -2,7 +2,7 @@
 <Language Name="Norsk">
   <General>
     <Title>Subtitle Edit</Title>
-    <Version>3.4.12</Version>
+    <Version>3.5.1</Version>
     <TranslatedBy>Oversatt av Dandelion Sprout</TranslatedBy>
     <CultureName>nb-NO</CultureName>
     <HelpFile />
@@ -725,6 +725,146 @@ Tips: Se om du har noe plass igjen på harddisken.</WaveFileMalformed>
     <TotalNumberOfLinesX>Totalt antall linjer: {0:#,###,###}</TotalNumberOfLinesX>
     <Note>Bemerk: Filene må allerede ha riktige tidsangivelser</Note>
   </JoinSubtitles>
+  <LanguageNames>
+    <aaName>afar</aaName>
+    <abName>abkhasisk</abName>
+    <afName>afrikaans</afName>
+    <amName>amharisk</amName>
+    <arName>arabisk</arName>
+    <asName>assamisk</asName>
+    <ayName>aymara</ayName>
+    <azName>aserbajdsjansk</azName>
+    <baName>basjkirsk</baName>
+    <beName>hviterussisk</beName>
+    <bgName>bulgarsk</bgName>
+    <biName>bislama</biName>
+    <bnName>bengali</bnName>
+    <boName>tibetansk</boName>
+    <brName>bretonsk</brName>
+    <caName>katalansk</caName>
+    <coName>korsikansk</coName>
+    <csName>tsjekkisk</csName>
+    <cyName>walisisk</cyName>
+    <daName>dansk</daName>
+    <deName>tysk</deName>
+    <dzName>dzongkha</dzName>
+    <elName>gresk</elName>
+    <enName>engelsk</enName>
+    <eoName>esperanto</eoName>
+    <esName>spansk</esName>
+    <etName>estisk</etName>
+    <euName>baskisk</euName>
+    <faName>persisk</faName>
+    <fiName>finsk</fiName>
+    <fjName>fijiansk</fjName>
+    <foName>færøysk</foName>
+    <frName>fransk</frName>
+    <fyName>vestfrisisk</fyName>
+    <gaName>irsk</gaName>
+    <gdName>skotsk gælisk</gdName>
+    <glName>galisisk</glName>
+    <gnName>guarani</gnName>
+    <guName>gujarati</guName>
+    <haName>hausa</haName>
+    <heName>hebraisk</heName>
+    <hiName>hindi</hiName>
+    <hrName>kroatisk</hrName>
+    <huName>ungarsk</huName>
+    <hyName>armensk</hyName>
+    <iaName>interlingua</iaName>
+    <idName>indonesisk</idName>
+    <ieName>interlingue</ieName>
+    <ikName>inupiak</ikName>
+    <isName>islandsk</isName>
+    <itName>italiensk</itName>
+    <iuName>inuktitut</iuName>
+    <jaName>japansk</jaName>
+    <jvName>javanesisk</jvName>
+    <kaName>georgisk</kaName>
+    <kkName>kasakhisk</kkName>
+    <klName>grønlandsk</klName>
+    <kmName>khmer</kmName>
+    <knName>kannada</knName>
+    <koName>koreansk</koName>
+    <ksName>kasjmiri</ksName>
+    <kuName>kurdisk</kuName>
+    <kyName>kirgisisk</kyName>
+    <laName>latin</laName>
+    <lbName>luxemburgsk</lbName>
+    <lnName>lingala</lnName>
+    <loName>laotisk</loName>
+    <ltName>litauisk</ltName>
+    <lvName>latvisk</lvName>
+    <mgName>gassisk</mgName>
+    <miName>maori</miName>
+    <mkName>makedonsk</mkName>
+    <mlName>malayalam</mlName>
+    <mnName>mongolsk</mnName>
+    <mrName>marathi</mrName>
+    <msName>malayisk</msName>
+    <mtName>maltesisk</mtName>
+    <myName>burmesisk</myName>
+    <naName>nauru</naName>
+    <neName>nepali</neName>
+    <nlName>nederlandsk</nlName>
+    <noName>norsk</noName>
+    <ocName>oksitansk</ocName>
+    <omName>oromo</omName>
+    <orName>oriya</orName>
+    <paName>punjabi</paName>
+    <plName>polsk</plName>
+    <psName>pashto</psName>
+    <ptName>portugisisk</ptName>
+    <quName>quechua</quName>
+    <rmName>retoromansk</rmName>
+    <rnName>rundi</rnName>
+    <roName>rumensk</roName>
+    <ruName>russisk</ruName>
+    <rwName>kinyarwanda</rwName>
+    <saName>sanskrit</saName>
+    <sdName>sindhi</sdName>
+    <sgName>sango</sgName>
+    <shName>serbokroatisk</shName>
+    <siName>singalesisk</siName>
+    <skName>slovakisk</skName>
+    <slName>slovensk</slName>
+    <smName>samoansk</smName>
+    <snName>shona</snName>
+    <soName>somali</soName>
+    <sqName>albansk</sqName>
+    <srName>serbisk</srName>
+    <ssName>swati</ssName>
+    <stName>sør-sotho</stName>
+    <suName>sundanesisk</suName>
+    <svName>svensk</svName>
+    <swName>swahili</swName>
+    <taName>tamil</taName>
+    <teName>telugu</teName>
+    <tgName>tadsjikisk</tgName>
+    <thName>thai</thName>
+    <tiName>tigrinja</tiName>
+    <tkName>turkmensk</tkName>
+    <tlName>tagalog</tlName>
+    <tnName>setswana</tnName>
+    <toName>tongansk</toName>
+    <trName>tyrkisk</trName>
+    <tsName>tsonga</tsName>
+    <ttName>tatarisk</ttName>
+    <twName>twi</twName>
+    <ugName>uigurisk</ugName>
+    <ukName>ukrainsk</ukName>
+    <urName>urdu</urName>
+    <uzName>usbekisk</uzName>
+    <viName>vietnamesisk</viName>
+    <voName>volapyk</voName>
+    <woName>wolof</woName>
+    <xhName>xhosa</xhName>
+    <yiName>jiddisk</yiName>
+    <yoName>joruba</yoName>
+    <zaName>zhuang</zaName>
+    <zhName>kinesisk</zhName>
+    <zuName>zulu</zuName>
+  </LanguageNames>
   <Main>
     <Menu>
       <File>
@@ -1038,7 +1178,6 @@ Tips: Se om du har noe plass igjen på harddisken.</WaveFileMalformed>
     <BeforeVisualSync>Før visuell synk</BeforeVisualSync>
     <VisualSyncPerformedOnSelectedLines>Visuell synk på valgte linjer</VisualSyncPerformedOnSelectedLines>
     <VisualSyncPerformed>Visuell synk utført</VisualSyncPerformed>
-    <ImportThisVobSubSubtitle>Vil du importere denne VobSub-underteksten?</ImportThisVobSubSubtitle>
     <FileXIsLargerThan10MB>Filen er større enn 10 MB: {0}</FileXIsLargerThan10MB>
     <ContinueAnyway>Fortsett likevel?</ContinueAnyway>
     <BeforeLoadOf>Før innlasting av {0}</BeforeLoadOf>
@@ -1362,7 +1501,7 @@ Hvis du har redigert denne filen i Subtitle Edit, kan du kanskje finne en backup
     <CaseSensitive>Sensitiv for store bokstaver</CaseSensitive>
     <RegularExpression>Vanlige uttrykk</RegularExpression>
     <LinesFoundX>Linjer funnet: {0}</LinesFoundX>
-    <Delete>Slett</Delete>
+    <Remove>Slett</Remove>
     <Add>&amp;Legg til</Add>
     <Update>&amp;Oppdater</Update>
     <Enabled>Skrudd på</Enabled>
@@ -1652,7 +1791,6 @@ Hvis du har redigert denne filen i Subtitle Edit, kan du kanskje finne en backup
     <Key>-knappen</Key>
     <TextBox>Tekstboks</TextBox>
     <UpdateShortcut>Oppdatering</UpdateShortcut>
-    <ShortcutIsNotValid>Snarveien er ikke gyldig: {0}</ShortcutIsNotValid>
     <ToggleDockUndockOfVideoControls>Velg å feste/avfeste videokontrolleren</ToggleDockUndockOfVideoControls>
     <CreateSetEndAddNewAndGoToNew>Velg sluttid, legg til ny og hopp til ny</CreateSetEndAddNewAndGoToNew>
     <AdjustViaEndAutoStartAndGoToNext>Juster gjennom sluttid og hopp til neste</AdjustViaEndAutoStartAndGoToNext>
@@ -1710,7 +1848,7 @@ Hvis du har redigert denne filen i Subtitle Edit, kan du kanskje finne en backup
     <SyntaxColorDurationIfTooSmall>Farg varigheten hvis den er for kort</SyntaxColorDurationIfTooSmall>
     <SyntaxColorDurationIfTooLarge>Farg varigheten hvis den er for lang</SyntaxColorDurationIfTooLarge>
     <SyntaxColorTextIfTooLong>Farg teksten hvis den er for lang</SyntaxColorTextIfTooLong>
-    <SyntaxColorTextMoreThanXLines>Farg teksten hvis den har for mange linjer</SyntaxColorTextMoreThanXLines>
+    <SyntaxColorTextMoreThanMaxLines>Farg teksten hvis den har mer enn {0} linjer</SyntaxColorTextMoreThanMaxLines>
     <SyntaxColorOverlap>Farg tidsangivelse-overlappinger</SyntaxColorOverlap>
     <SyntaxErrorColor>Farge for feil</SyntaxErrorColor>
     <GoToFirstSelectedLine>Hopp til først valgte linje</GoToFirstSelectedLine>
