--- a/andryoustreamdl/SubtitleEdit/Languages/nl-NL.xml
+++ b/andryoustreamdl/SubtitleEdit/Languages/nl-NL.xml
@@ -2,7 +2,7 @@
 <Language Name="Nederlands">
   <General>
     <Title>Subtitle Edit</Title>
-    <Version>3.4.12</Version>
+    <Version>3.5.1</Version>
     <TranslatedBy>Vertaald door Quetsbeek en minouhse 11082014</TranslatedBy>
     <CultureName>nl-NL</CultureName>
     <HelpFile />
@@ -686,6 +686,7 @@ Is er voldoende beschikbare ruimte op de harde schĳf?</WaveFileMalformed>
     <Frames>Beelden</Frames>
     <Seconds>Seconden</Seconds>
     <Milliseconds>Milliseconden</Milliseconds>
+    <GetSceneChangesWithFfmpeg>Scènewisselingen met FFmpeg bepalen</GetSceneChangesWithFfmpeg>
   </ImportSceneChanges>
   <ImportText>
     <Title>Platte tekst importeren</Title>
@@ -724,6 +725,150 @@ Is er voldoende beschikbare ruimte op de harde schĳf?</WaveFileMalformed>
     <TotalNumberOfLinesX>Totaal aantal regels: {0:#,###,###}</TotalNumberOfLinesX>
     <Note>Opmerking: de tĳdcodes in de bestanden moeten al juist zĳn</Note>
   </JoinSubtitles>
+  <LanguageNames>
+    <NotSpecified>Onbepaald</NotSpecified>
+    <UnknownCodeX>Onbekend ({0})</UnknownCodeX>
+    <aaName>Afar</aaName>
+    <abName>Abchazisch</abName>
+    <afName>Afrikaans</afName>
+    <amName>Amhaars</amName>
+    <arName>Arabisch</arName>
+    <asName>Assamees</asName>
+    <ayName>Aymara</ayName>
+    <azName>Azerbeidzjaans</azName>
+    <baName>Basjkiers</baName>
+    <beName>Wit-Russisch</beName>
+    <bgName>Bulgaars</bgName>
+    <bhName>Bihari</bhName>
+    <biName>Bislama</biName>
+    <bnName>Bengaals</bnName>
+    <boName>Tibetaans</boName>
+    <brName>Bretons</brName>
+    <caName>Catalaans</caName>
+    <coName>Corsicaans</coName>
+    <csName>Tsjechisch</csName>
+    <cyName>Welsh</cyName>
+    <daName>Deens</daName>
+    <deName>Duits</deName>
+    <dzName>Dzongkha</dzName>
+    <elName>Grieks</elName>
+    <enName>Engels</enName>
+    <eoName>Esperanto</eoName>
+    <esName>Spaans</esName>
+    <etName>Estisch</etName>
+    <euName>Baskisch</euName>
+    <faName>Perzisch</faName>
+    <fiName>Fins</fiName>
+    <fjName>Fijisch</fjName>
+    <foName>Faeröers</foName>
+    <frName>Frans</frName>
+    <fyName>Fries</fyName>
+    <gaName>Iers</gaName>
+    <gdName>Schots-Gaelisch</gdName>
+    <glName>Galicisch</glName>
+    <gnName>Guaraní</gnName>
+    <guName>Gujarati</guName>
+    <haName>Hausa</haName>
+    <heName>Hebreeuws</heName>
+    <hiName>Hindi</hiName>
+    <hrName>Kroatisch</hrName>
+    <huName>Hongaars</huName>
+    <hyName>Armeens</hyName>
+    <iaName>Interlingua</iaName>
+    <idName>Indonesisch</idName>
+    <ieName>Interlingue</ieName>
+    <ikName>Inupiaq</ikName>
+    <isName>Ĳslands</isName>
+    <itName>Italiaans</itName>
+    <iuName>Inuktitut</iuName>
+    <jaName>Japans</jaName>
+    <jvName>Javaans</jvName>
+    <kaName>Georgisch</kaName>
+    <kkName>Kazachs</kkName>
+    <klName>Groenlands</klName>
+    <kmName>Khmer</kmName>
+    <knName>Kannada</knName>
+    <koName>Koreaans</koName>
+    <ksName>Kasjmiri</ksName>
+    <kuName>Koerdisch</kuName>
+    <kyName>Kirgizisch</kyName>
+    <laName>Latĳn</laName>
+    <lbName>Luxemburgs</lbName>
+    <lnName>Lingala</lnName>
+    <loName>Laotiaans</loName>
+    <ltName>Litouws</ltName>
+    <lvName>Lets</lvName>
+    <mgName>Malagassisch</mgName>
+    <miName>Maori</miName>
+    <mkName>Macedonisch</mkName>
+    <mlName>Malayalam</mlName>
+    <mnName>Mongools</mnName>
+    <moName>Moldavisch</moName>
+    <mrName>Marathi</mrName>
+    <msName>Maleis</msName>
+    <mtName>Maltees</mtName>
+    <myName>Birmaans</myName>
+    <naName>Nauruaans</naName>
+    <neName>Nepalees</neName>
+    <nlName>Nederlands</nlName>
+    <noName>Noors</noName>
+    <ocName>Occitaans</ocName>
+    <omName>Afaan Oromo</omName>
+    <orName>Odia</orName>
+    <paName>Punjabi</paName>
+    <plName>Pools</plName>
+    <psName>Pasjtoe</psName>
+    <ptName>Portugees</ptName>
+    <quName>Quechua</quName>
+    <rmName>Reto-Romaans</rmName>
+    <rnName>Kirundi</rnName>
+    <roName>Roemeens</roName>
+    <ruName>Russisch</ruName>
+    <rwName>Kinyarwanda</rwName>
+    <saName>Sanskriet</saName>
+    <sdName>Sindhi</sdName>
+    <sgName>Sango</sgName>
+    <shName>Servo-Kroatisch</shName>
+    <siName>Singalees</siName>
+    <skName>Slowaaks</skName>
+    <slName>Sloveens</slName>
+    <smName>Samoaans</smName>
+    <snName>Shona</snName>
+    <soName>Somalisch</soName>
+    <sqName>Albanees</sqName>
+    <srName>Servisch</srName>
+    <ssName>Swazi</ssName>
+    <stName>Zuid-Sotho</stName>
+    <suName>Soendanees</suName>
+    <svName>Zweeds</svName>
+    <swName>Swahili</swName>
+    <taName>Tamil</taName>
+    <teName>Telugu</teName>
+    <tgName>Tadzjieks</tgName>
+    <thName>Thai</thName>
+    <tiName>Tigrinya</tiName>
+    <tkName>Turkmeens</tkName>
+    <tlName>Tagalog</tlName>
+    <tnName>Tswana</tnName>
+    <toName>Tongaans</toName>
+    <trName>Turks</trName>
+    <tsName>Tsonga</tsName>
+    <ttName>Tataars</ttName>
+    <twName>Twi</twName>
+    <ugName>Oeigoers</ugName>
+    <ukName>Oekraïens</ukName>
+    <urName>Urdu</urName>
+    <uzName>Oezbeeks</uzName>
+    <viName>Vietnamees</viName>
+    <voName>Volapük</voName>
+    <woName>Wolof</woName>
+    <xhName>Xhosa</xhName>
+    <yiName>Jiddisch</yiName>
+    <yoName>Yoruba</yoName>
+    <zaName>Zhuang</zaName>
+    <zhName>Chinees</zhName>
+    <zuName>Zoeloe</zuName>
+  </LanguageNames>
   <Main>
     <Menu>
       <File>
@@ -843,6 +988,7 @@ Is er voldoende beschikbare ruimte op de harde schĳf?</WaveFileMalformed>
         <OpenDvd>Dvd openen...</OpenDvd>
         <ChooseAudioTrack>Audiospoor kiezen</ChooseAudioTrack>
         <CloseVideo>Videobestand sluiten</CloseVideo>
+        <SetVideoOffset>Videotĳdsverschil instellen...</SetVideoOffset>
         <ImportSceneChanges>Scènewisselingen importeren</ImportSceneChanges>
         <RemoveSceneChanges>Scènewisselingen verwĳderen</RemoveSceneChanges>
         <WaveformBatchGenerate>Golfvormen genereren</WaveformBatchGenerate>
@@ -901,6 +1047,7 @@ Is er voldoende beschikbare ruimte op de harde schĳf?</WaveFileMalformed>
         <Find>Zoeken</Find>
         <Replace>Vervangen</Replace>
         <FixCommonErrors>Gangbare fouten corrigeren</FixCommonErrors>
+        <RemoveTextForHi>Tekst voor slechthorenden verwĳderen</RemoveTextForHi>
         <VisualSync>Visuele synchronisatie</VisualSync>
         <SpellCheck>Spellingcontrole</SpellCheck>
         <Settings>Voorkeuren</Settings>
@@ -1037,7 +1184,6 @@ Is er voldoende beschikbare ruimte op de harde schĳf?</WaveFileMalformed>
     <BeforeVisualSync>Vóór visuele sync</BeforeVisualSync>
     <VisualSyncPerformedOnSelectedLines>Visuele sync uitgevoerd op tekstselectie</VisualSyncPerformedOnSelectedLines>
     <VisualSyncPerformed>Visuele synchronisatie uitgevoerd</VisualSyncPerformed>
-    <ImportThisVobSubSubtitle>Deze VobSub-ondertitel importeren?</ImportThisVobSubSubtitle>
     <FileXIsLargerThan10MB>Bestand is groter dan 10 MB: {0}</FileXIsLargerThan10MB>
     <ContinueAnyway>Toch doorgaan?</ContinueAnyway>
     <BeforeLoadOf>Vóór laden van {0}</BeforeLoadOf>
@@ -1362,7 +1508,7 @@ Indien u dit bestand met Subtitle Edit bewerkt hebt, kunt u een vorige versie vi
     <CaseSensitive>Hoofdlettergevoelig</CaseSensitive>
     <RegularExpression>Reguliere expressie</RegularExpression>
     <LinesFoundX>Gevonden teksten: {0}</LinesFoundX>
-    <Delete>Verwĳderen</Delete>
+    <Remove>Verwĳderen</Remove>
     <Add>Toevoegen</Add>
     <Update>Bĳwerken</Update>
     <Enabled>Ingeschakeld</Enabled>
@@ -1375,6 +1521,12 @@ Indien u dit bestand met Subtitle Edit bewerkt hebt, kunt u een vorige versie vi
     <Rules>Tekstvervangingsregels</Rules>
     <MoveToTop>Naar begin</MoveToTop>
     <MoveToBottom>Naar einde</MoveToBottom>
+    <MoveSelectedRulesToGroup>Geselecteerde regels verplaatsen</MoveSelectedRulesToGroup>
+    <Groups>Groepen</Groups>
+    <RulesForGroupX>Regels voor groep ‘{0}’</RulesForGroupX>
+    <GroupName>Groepsnaam</GroupName>
+    <RenameGroup>Groepsnaam wĳzigen...</RenameGroup>
+    <NewGroup>Nieuwe groep...</NewGroup>
   </MultipleReplace>
   <NetworkChat>
     <Title>Chat</Title>
@@ -1533,6 +1685,7 @@ hetzelfde ondertitelbestand bewerken (samenwerking)</Information>
     <DurationMinimumMilliseconds>Min. tĳdsduur in milliseconden</DurationMinimumMilliseconds>
     <DurationMaximumMilliseconds>Max. tĳdsduur in milliseconden</DurationMaximumMilliseconds>
     <MinimumGapMilliseconds>Min. ruimte tussen ondertitels in msec.</MinimumGapMilliseconds>
+    <MaximumLines>Max. aantal regels</MaximumLines>
     <SubtitleFont>Ondertitel lettertype</SubtitleFont>
     <SubtitleFontSize>Ondertitel lettergrootte</SubtitleFontSize>
     <SubtitleBold>Vet</SubtitleBold>
@@ -1560,6 +1713,10 @@ hetzelfde ondertitelbestand bewerken (samenwerking)</Information>
     <AutoBackupEveryMinute>Elke minuut</AutoBackupEveryMinute>
     <AutoBackupEveryFiveMinutes>Elke 5e minuut</AutoBackupEveryFiveMinutes>
     <AutoBackupEveryFifteenMinutes>Elke 15e minuut</AutoBackupEveryFifteenMinutes>
+    <AutoBackupDeleteAfter>Verwĳderen na</AutoBackupDeleteAfter>
+    <AutoBackupDeleteAfterOneMonth>1 maand</AutoBackupDeleteAfterOneMonth>
+    <AutoBackupDeleteAfterThreeMonths>3 maanden</AutoBackupDeleteAfterThreeMonths>
+    <AutoBackupDeleteAfterSixMonths>6 maanden</AutoBackupDeleteAfterSixMonths>
     <CheckForUpdates>Naar updates zoeken</CheckForUpdates>
     <AllowEditOfOriginalSubtitle>Sta bewerking van de originele ondertitel toe</AllowEditOfOriginalSubtitle>
     <PromptDeleteLines>Verwĳderen van tekst bevestigen</PromptDeleteLines>
@@ -1642,6 +1799,7 @@ hetzelfde ondertitelbestand bewerken (samenwerking)</Information>
     <FirstPlusX>Eerste + {0}</FirstPlusX>
     <LastMinusX>Laatste - {0}</LastMinusX>
     <FixCommonerrors>Fouten corrigeren</FixCommonerrors>
+    <RemoveTextForHi>D&amp;&amp;SH tekst verwĳderen</RemoveTextForHi>
     <MergeLinesShorterThan>Voeg regels samen korter dan</MergeLinesShorterThan>
     <MusicSymbol>Vervangend muzieksymbool</MusicSymbol>
     <MusicSymbolsToReplace>Te vervangen muzieksymbolen (gescheiden door spatie)</MusicSymbolsToReplace>
@@ -1656,7 +1814,6 @@ hetzelfde ondertitelbestand bewerken (samenwerking)</Information>
     <Key>Toets</Key>
     <TextBox>Tekstbox</TextBox>
     <UpdateShortcut>Bĳwerken</UpdateShortcut>
-    <ShortcutIsNotValid>Sneltoets is ongeldig: {0}</ShortcutIsNotValid>
     <ToggleDockUndockOfVideoControls>Wissel koppel/loskoppel video controles</ToggleDockUndockOfVideoControls>
     <CreateSetEndAddNewAndGoToNew>Bepaal einde, voeg nieuwe toe en ga naar nieuwe</CreateSetEndAddNewAndGoToNew>
     <AdjustViaEndAutoStartAndGoToNext>Pas aan via eindpositie en ga naar volgende</AdjustViaEndAutoStartAndGoToNext>
@@ -1669,12 +1826,14 @@ hetzelfde ondertitelbestand bewerken (samenwerking)</Information>
     <AdjustSetStartTimeKeepDuration>Bepaal starttĳd, behoud duur</AdjustSetStartTimeKeepDuration>
     <AdjustSetEndAndOffsetTheRest>Stel einde in, compenseer de rest</AdjustSetEndAndOffsetTheRest>
     <AdjustSetEndAndOffsetTheRestAndGoToNext>Stel einde in, compenseer de rest en naar volgende</AdjustSetEndAndOffsetTheRestAndGoToNext>
+    <AdjustExtendCurrentSubtitle>Tĳdsduur verlengen tot volgende tekst of maximale tĳdsduur</AdjustExtendCurrentSubtitle>
     <MainCreateStartDownEndUp>Maak nieuwe met pĳl omlaag , bepaal eindtĳd met pĳl omhoog</MainCreateStartDownEndUp>
     <MergeDialog>Samenvoegen dialoog (voeg koppelteken in)</MergeDialog>
     <GoToNext>Ga naar volgende regel</GoToNext>
     <GoToPrevious>Ga naar vorige regel</GoToPrevious>
     <GoToCurrentSubtitleStart>Naar start van huidige tekst</GoToCurrentSubtitleStart>
     <GoToCurrentSubtitleEnd>Naar einde van huidige tekst</GoToCurrentSubtitleEnd>
+    <GoToNextSubtitleAndFocusVideo>Naar volgende tekst en positie instellen</GoToNextSubtitleAndFocusVideo>
     <ToggleFocus>Tussen lĳstweergave en tekstvak wisselen</ToggleFocus>
     <ToggleDialogDashes>Dialoogstreepjes wisselen</ToggleDialogDashes>
     <Alignment>Uitlĳning (geselecteerde regels)</Alignment>
@@ -1692,6 +1851,8 @@ hetzelfde ondertitelbestand bewerken (samenwerking)</Information>
     <WaveformPlayNewSelectionEnd>Speel selectie-einde</WaveformPlayNewSelectionEnd>
     <WaveformPlayFirstSelectedSubtitle>Speel eerste geselecteerde ondertitel</WaveformPlayFirstSelectedSubtitle>
     <WaveformFocusListView>Focus lĳstweergave</WaveformFocusListView>
+    <WaveformGoToNextSceneChange>Naar volgende scène</WaveformGoToNextSceneChange>
+    <WaveformToggleSceneChange>Scènewisseling omkeren</WaveformToggleSceneChange>
     <GoBack1Frame>Eén frame terug</GoBack1Frame>
     <GoForward1Frame>Eén frame vooruit</GoForward1Frame>
     <GoBack100Milliseconds>100 msec. terug</GoBack100Milliseconds>
@@ -1700,6 +1861,8 @@ hetzelfde ondertitelbestand bewerken (samenwerking)</Information>
     <GoForward500Milliseconds>500 msec. vooruit</GoForward500Milliseconds>
     <GoBack1Second>Eén seconde terug</GoBack1Second>
     <GoForward1Second>Eén seconde vooruit</GoForward1Second>
+    <GoBack5Seconds>Vĳf seconden terug</GoBack5Seconds>
+    <GoForward5Seconds>Vĳf seconden vooruit</GoForward5Seconds>
     <TogglePlayPause>Verander tussen afspelen/pauze</TogglePlayPause>
     <Pause>Pauze</Pause>
     <Fullscreen>Volledig Scherm</Fullscreen>
@@ -1714,7 +1877,7 @@ hetzelfde ondertitelbestand bewerken (samenwerking)</Information>
     <SyntaxColorDurationIfTooSmall>Kleur tĳdsduur indien te kort</SyntaxColorDurationIfTooSmall>
     <SyntaxColorDurationIfTooLarge>Kleur tĳdsduur indien te lang</SyntaxColorDurationIfTooLarge>
     <SyntaxColorTextIfTooLong>Kleur tekst indien te lang</SyntaxColorTextIfTooLong>
-    <SyntaxColorTextMoreThanXLines>Kleur tekst bĳ meer regels dan:</SyntaxColorTextMoreThanXLines>
+    <SyntaxColorTextMoreThanMaxLines>Kleur tekst bĳ meer dan {0} regels</SyntaxColorTextMoreThanMaxLines>
     <SyntaxColorOverlap>Kleur tĳdcode bĳ overlap</SyntaxColorOverlap>
     <SyntaxErrorColor>Foutkleur</SyntaxErrorColor>
     <GoToFirstSelectedLine>Ga naar eerste geselecteerde regel</GoToFirstSelectedLine>
@@ -1759,6 +1922,8 @@ Probeer het later opnieuw a.u.b.</DownloadMpvFailed>
     <Title>Videotĳdsverschil instellen</Title>
     <Description>Videotĳdsverschil instellen (ondertitels moeten niet de echte videotĳd volgen, maar bĳvoorbeeld +10 uur)</Description>
     <RelativeToCurrentVideoPosition>Ten opzichte van de huidige videopositie</RelativeToCurrentVideoPosition>
+    <KeepTimeCodes>Tĳdcodes behouden (videotĳdsverschil niet toevoegen)</KeepTimeCodes>
+    <Reset>Terugstellen</Reset>
   </SetVideoOffset>
   <ShowEarlierLater>
     <Title>Geselecteerde ondertitels eerder/later tonen</Title>
@@ -2090,6 +2255,17 @@ Wĳzigingen behouden?</KeepChangesMessage>
     <Title>Decursiveringsfactor bepalen</Title>
     <Description>Waarde aanpassen tot cursief in romein overgaat. De originele afbeelding moet cursief zĳn.</Description>
   </VobSubOcrSetItalicFactor>
+  <Watermark>
+    <Title>Watermerk</Title>
+    <WatermarkX>Watermerk: {0}</WatermarkX>
+    <GenerateWatermarkTitle>Watermerk genereren</GenerateWatermarkTitle>
+    <SpreadOverEntireSubtitle>Over alle ondertitels spreiden</SpreadOverEntireSubtitle>
+    <CurrentLineOnlyX>Alleen huidige tekst: {0}</CurrentLineOnlyX>
+    <Generate>&amp;Genereren</Generate>
+    <Remove>&amp;Verwĳderen</Remove>
+    <BeforeWatermark>Vóór watermerk</BeforeWatermark>
+    <ErrorUnicodeEncodingOnly>Een watermerk toevoegen kan alleen in unicode codering.</ErrorUnicodeEncodingOnly>
+  </Watermark>
   <Waveform>
     <ClickToAddWaveform>Klik om golfvorm toe te voegen</ClickToAddWaveform>
     <ClickToAddWaveformAndSpectrogram>Klik om golfvorm/spectrogram toe te voegen</ClickToAddWaveformAndSpectrogram>
@@ -2108,6 +2284,8 @@ Wĳzigingen behouden?</KeepChangesMessage>
     <ShowWaveformAndSpectrogram>Golfvorm en spectrogram tonen</ShowWaveformAndSpectrogram>
     <ShowWaveformOnly>Alleen golfvorm tonen</ShowWaveformOnly>
     <ShowSpectrogramOnly>Alleen spectrogram tonen</ShowSpectrogramOnly>
+    <AddSceneChange>Scènewisseling toevoegen</AddSceneChange>
+    <RemoveSceneChange>Scènewisseling verwĳderen</RemoveSceneChange>
     <GuessTimeCodes>Tĳdcodes schatten...</GuessTimeCodes>
     <SeekSilence>Stilte zoeken...</SeekSilence>
   </Waveform>
