--- a/andryoustreamdl/SubtitleEdit/Languages/sv-SE.xml
+++ b/andryoustreamdl/SubtitleEdit/Languages/sv-SE.xml
@@ -2,7 +2,7 @@
 <Language Name="svenska">
   <General>
     <Title>Subtitle Edit</Title>
-    <Version>3.4.12</Version>
+    <Version>3.5.1</Version>
     <TranslatedBy>Översätt av Ted</TranslatedBy>
     <CultureName>sv-SE</CultureName>
     <HelpFile />
@@ -665,6 +665,146 @@ E-post: mailto:nikse.dk@gmail.com</AboutText1>
     <Join>Gå med</Join>
     <TotalNumberOfLinesX>Totalt antal linjer: {0:#,###,###}</TotalNumberOfLinesX>
   </JoinSubtitles>
+  <LanguageNames>
+    <aaName>afar</aaName>
+    <abName>abchaziska</abName>
+    <afName>afrikaans</afName>
+    <amName>amhariska</amName>
+    <arName>arabiska</arName>
+    <asName>assamesiska</asName>
+    <ayName>aymara</ayName>
+    <azName>azerbajdzjanska</azName>
+    <baName>basjkiriska</baName>
+    <beName>vitryska</beName>
+    <bgName>bulgariska</bgName>
+    <biName>bislama</biName>
+    <bnName>bengali</bnName>
+    <boName>tibetanska</boName>
+    <brName>bretonska</brName>
+    <caName>katalanska</caName>
+    <coName>korsikanska</coName>
+    <csName>tjeckiska</csName>
+    <cyName>walesiska</cyName>
+    <daName>danska</daName>
+    <deName>tyska</deName>
+    <dzName>bhutanesiska</dzName>
+    <elName>grekiska</elName>
+    <enName>engelska</enName>
+    <eoName>esperanto</eoName>
+    <esName>spanska</esName>
+    <etName>estniska</etName>
+    <euName>baskiska</euName>
+    <faName>persiska</faName>
+    <fiName>finska</fiName>
+    <fjName>fijianska</fjName>
+    <foName>färöiska</foName>
+    <frName>franska</frName>
+    <fyName>västfrisiska</fyName>
+    <gaName>iriska</gaName>
+    <gdName>skotsk gäliska</gdName>
+    <glName>galiciska</glName>
+    <gnName>guaraní</gnName>
+    <guName>gujarati</guName>
+    <haName>hausa</haName>
+    <heName>hebreiska</heName>
+    <hiName>hindi</hiName>
+    <hrName>kroatiska</hrName>
+    <huName>ungerska</huName>
+    <hyName>armeniska</hyName>
+    <iaName>interlingua</iaName>
+    <idName>indonesiska</idName>
+    <ieName>interlingue</ieName>
+    <ikName>inupiak</ikName>
+    <isName>isländska</isName>
+    <itName>italienska</itName>
+    <iuName>inuktitut</iuName>
+    <jaName>japanska</jaName>
+    <jvName>javanesiska</jvName>
+    <kaName>georgiska</kaName>
+    <kkName>kazakiska</kkName>
+    <klName>grönländska</klName>
+    <kmName>kambodjanska</kmName>
+    <knName>kannada</knName>
+    <koName>koreanska</koName>
+    <ksName>kashmiriska</ksName>
+    <kuName>kurdiska</kuName>
+    <kyName>kirgisiska</kyName>
+    <laName>latin</laName>
+    <lbName>luxemburgiska</lbName>
+    <lnName>lingala</lnName>
+    <loName>laotiska</loName>
+    <ltName>litauiska</ltName>
+    <lvName>lettiska</lvName>
+    <mgName>malagassiska</mgName>
+    <miName>maori</miName>
+    <mkName>makedonska</mkName>
+    <mlName>malayalam</mlName>
+    <mnName>mongoliska</mnName>
+    <mrName>marathi</mrName>
+    <msName>malajiska</msName>
+    <mtName>maltesiska</mtName>
+    <myName>burmesiska</myName>
+    <naName>nauru</naName>
+    <neName>nepalesiska</neName>
+    <nlName>nederländska</nlName>
+    <noName>norska</noName>
+    <ocName>occitanska</ocName>
+    <omName>oromo</omName>
+    <orName>oriya</orName>
+    <paName>punjabi</paName>
+    <plName>polska</plName>
+    <psName>afghanska</psName>
+    <ptName>portugisiska</ptName>
+    <quName>quechua</quName>
+    <rmName>rätoromanska</rmName>
+    <rnName>rundi</rnName>
+    <roName>rumänska</roName>
+    <ruName>ryska</ruName>
+    <rwName>kinjarwanda</rwName>
+    <saName>sanskrit</saName>
+    <sdName>sindhi</sdName>
+    <sgName>sango</sgName>
+    <shName>serbokroatiska</shName>
+    <siName>singalesiska</siName>
+    <skName>slovakiska</skName>
+    <slName>slovenska</slName>
+    <smName>samoanska</smName>
+    <snName>shona</snName>
+    <soName>somaliska</soName>
+    <sqName>albanska</sqName>
+    <srName>serbiska</srName>
+    <ssName>swati</ssName>
+    <stName>sydsotho</stName>
+    <suName>sundanesiska</suName>
+    <svName>svenska</svName>
+    <swName>swahili</swName>
+    <taName>tamil</taName>
+    <teName>telugiska</teName>
+    <tgName>tadzjikiska</tgName>
+    <thName>thailändska</thName>
+    <tiName>tigrinja</tiName>
+    <tkName>turkmeniska</tkName>
+    <tlName>tagalog</tlName>
+    <tnName>tswana</tnName>
+    <toName>tonganska</toName>
+    <trName>turkiska</trName>
+    <tsName>tsonga</tsName>
+    <ttName>tatariska</ttName>
+    <twName>twi</twName>
+    <ugName>uiguriska</ugName>
+    <ukName>ukrainska</ukName>
+    <urName>urdu</urName>
+    <uzName>uzbekiska</uzName>
+    <viName>vietnamesiska</viName>
+    <voName>volapük</voName>
+    <woName>wolof</woName>
+    <xhName>xhosa</xhName>
+    <yiName>jiddisch</yiName>
+    <yoName>yoruba</yoName>
+    <zaName>zhuang</zaName>
+    <zhName>kinesiska</zhName>
+    <zuName>zulu</zuName>
+  </LanguageNames>
   <Main>
     <Menu>
       <File>
@@ -967,7 +1107,6 @@ E-post: mailto:nikse.dk@gmail.com</AboutText1>
     <BeforeVisualSync>Före visuell synkronisering</BeforeVisualSync>
     <VisualSyncPerformedOnSelectedLines>Visuell synkronisera utförs på utvalda rader</VisualSyncPerformedOnSelectedLines>
     <VisualSyncPerformed>Visuell synk utförs</VisualSyncPerformed>
-    <ImportThisVobSubSubtitle>Import denna VobSub text?</ImportThisVobSubSubtitle>
     <FileXIsLargerThan10MB>Filen är större än 10 MB: {0}</FileXIsLargerThan10MB>
     <ContinueAnyway>Fortsätt ändå?</ContinueAnyway>
     <BeforeLoadOf>Innan du laddar {0}</BeforeLoadOf>
@@ -1271,7 +1410,7 @@ Fortsätta?</SubtitleAppendPrompt>
     <CaseSensitive>Skiftlägeskänslig</CaseSensitive>
     <RegularExpression>Vanligt uttryck</RegularExpression>
     <LinesFoundX>Rader hittades: {0}</LinesFoundX>
-    <Delete>Radera</Delete>
+    <Remove>Radera</Remove>
     <Add>Lägg till</Add>
     <Update>Uppdatera</Update>
     <Enabled>Aktiverad</Enabled>
@@ -1552,7 +1691,6 @@ kan redigera i samma textningsfil (samarbete)</Information>
     <Key>Key</Key>
     <TextBox>Textruta</TextBox>
     <UpdateShortcut>Uppdatera</UpdateShortcut>
-    <ShortcutIsNotValid>Genväg är inte giltig: {0}</ShortcutIsNotValid>
     <ToggleDockUndockOfVideoControls>Växla dock/undock video kontroll</ToggleDockUndockOfVideoControls>
     <CreateSetEndAddNewAndGoToNew>Välj slut, lägg till ny och gå till nya</CreateSetEndAddNewAndGoToNew>
     <AdjustViaEndAutoStartAndGoToNext>Justera via ändläge och gå till nästa</AdjustViaEndAutoStartAndGoToNext>
@@ -1606,7 +1744,7 @@ kan redigera i samma textningsfil (samarbete)</Information>
     <SyntaxColorDurationIfTooSmall>Färg - längd, om för kort</SyntaxColorDurationIfTooSmall>
     <SyntaxColorDurationIfTooLarge>Färg - längd, om för lång</SyntaxColorDurationIfTooLarge>
     <SyntaxColorTextIfTooLong>Färg - text, om för länge</SyntaxColorTextIfTooLong>
-    <SyntaxColorTextMoreThanXLines>Färg - text, om mer än rader:</SyntaxColorTextMoreThanXLines>
+    <SyntaxColorTextMoreThanMaxLines>Färg - text, om mer än {0} rader</SyntaxColorTextMoreThanMaxLines>
     <SyntaxColorOverlap>Färg - tidskod, överlappning</SyntaxColorOverlap>
     <SyntaxErrorColor>Färg vid fel</SyntaxErrorColor>
     <GoToFirstSelectedLine>Gå till första valda linjen</GoToFirstSelectedLine>
