--- a/andryoustreamdl/SubtitleEdit/Languages/uk-UA.xml
+++ b/andryoustreamdl/SubtitleEdit/Languages/uk-UA.xml
@@ -2,7 +2,7 @@
 <Language Name="українська">
   <General>
     <Title>Subtitle Edit</Title>
-    <Version>3.4.12</Version>
+    <Version>3.5.1</Version>
     <TranslatedBy>Переклад: Максим Кобєлєв http://mazepa-studio.com</TranslatedBy>
     <CultureName>uk-UA</CultureName>
     <HelpFile />
@@ -716,6 +716,146 @@ Email: mailto:nikse.dk@gmail.com</AboutText1>
     <TotalNumberOfLinesX>Всього рядків: {0:#,###,###}</TotalNumberOfLinesX>
     <Note>Зверніть увагу: Файли вже повинні містити правильні часові мітки</Note>
   </JoinSubtitles>
+  <LanguageNames>
+    <aaName>афарська</aaName>
+    <abName>абхазька</abName>
+    <afName>африкаанс</afName>
+    <amName>амхарська</amName>
+    <arName>арабська</arName>
+    <asName>ассамська</asName>
+    <ayName>аймара</ayName>
+    <azName>азербайджанська</azName>
+    <baName>башкирська</baName>
+    <beName>білоруська</beName>
+    <bgName>болгарська</bgName>
+    <biName>біслама</biName>
+    <bnName>бенгальська</bnName>
+    <boName>тибетська</boName>
+    <brName>бретонська</brName>
+    <caName>каталонська</caName>
+    <coName>корсиканська</coName>
+    <csName>чеська</csName>
+    <cyName>валлійська</cyName>
+    <daName>данська</daName>
+    <deName>німецька</deName>
+    <dzName>дзонг-ке</dzName>
+    <elName>грецька</elName>
+    <enName>англійська</enName>
+    <eoName>есперанто</eoName>
+    <esName>іспанська</esName>
+    <etName>естонська</etName>
+    <euName>баскська</euName>
+    <faName>перська</faName>
+    <fiName>фінська</fiName>
+    <fjName>фіджі</fjName>
+    <foName>фарерська</foName>
+    <frName>французька</frName>
+    <fyName>західнофризька</fyName>
+    <gaName>ірландська</gaName>
+    <gdName>гаельська</gdName>
+    <glName>галісійська</glName>
+    <gnName>гуарані</gnName>
+    <guName>гуджараті</guName>
+    <haName>хауса</haName>
+    <heName>іврит</heName>
+    <hiName>гінді</hiName>
+    <hrName>хорватська</hrName>
+    <huName>угорська</huName>
+    <hyName>вірменська</hyName>
+    <iaName>інтерлінгва</iaName>
+    <idName>індонезійська</idName>
+    <ieName>інтерлінгве</ieName>
+    <ikName>інупіак</ikName>
+    <isName>ісландська</isName>
+    <itName>італійська</itName>
+    <iuName>інуктітут</iuName>
+    <jaName>японська</jaName>
+    <jvName>яванська</jvName>
+    <kaName>грузинська</kaName>
+    <kkName>казахська</kkName>
+    <klName>калааллісут</klName>
+    <kmName>кхмерська</kmName>
+    <knName>каннада</knName>
+    <koName>корейська</koName>
+    <ksName>кашмірська</ksName>
+    <kuName>курдська</kuName>
+    <kyName>киргизька</kyName>
+    <laName>латинська</laName>
+    <lbName>люксембурзька</lbName>
+    <lnName>лінгала</lnName>
+    <loName>лаоська</loName>
+    <ltName>литовська</ltName>
+    <lvName>латвійська</lvName>
+    <mgName>малагасійська</mgName>
+    <miName>маорі</miName>
+    <mkName>македонська</mkName>
+    <mlName>малаялам</mlName>
+    <mnName>монгольська</mnName>
+    <mrName>маратхі</mrName>
+    <msName>малайська</msName>
+    <mtName>мальтійська</mtName>
+    <myName>бірманська</myName>
+    <naName>науру</naName>
+    <neName>непальська</neName>
+    <nlName>голландська</nlName>
+    <noName>норвезька</noName>
+    <ocName>окитан</ocName>
+    <omName>оромо</omName>
+    <orName>орія</orName>
+    <paName>панджабі</paName>
+    <plName>польська</plName>
+    <psName>пушту</psName>
+    <ptName>португальська</ptName>
+    <quName>кечуа</quName>
+    <rmName>ретороманська</rmName>
+    <rnName>рунді</rnName>
+    <roName>румунська</roName>
+    <ruName>російська</ruName>
+    <rwName>кіньяруанда</rwName>
+    <saName>санскрит</saName>
+    <sdName>сіндхі</sdName>
+    <sgName>санго</sgName>
+    <shName>сербсько-хорватська</shName>
+    <siName>сингальська</siName>
+    <skName>словацька</skName>
+    <slName>словенська</slName>
+    <smName>самоанська</smName>
+    <snName>шона</snName>
+    <soName>сомалі</soName>
+    <sqName>албанська</sqName>
+    <srName>сербська</srName>
+    <ssName>сісваті</ssName>
+    <stName>сото південна</stName>
+    <suName>сунданська</suName>
+    <svName>шведська</svName>
+    <swName>суахілі</swName>
+    <taName>тамільська</taName>
+    <teName>телугу</teName>
+    <tgName>таджицька</tgName>
+    <thName>тайська</thName>
+    <tiName>тигринья</tiName>
+    <tkName>туркменська</tkName>
+    <tlName>тагальська</tlName>
+    <tnName>тсвана</tnName>
+    <toName>тонганська</toName>
+    <trName>турецька</trName>
+    <tsName>тсонга</tsName>
+    <ttName>татарська</ttName>
+    <twName>тві</twName>
+    <ugName>уйгурська</ugName>
+    <ukName>українська</ukName>
+    <urName>урду</urName>
+    <uzName>узбецька</uzName>
+    <viName>вʼєтнамська</viName>
+    <voName>волап’юк</voName>
+    <woName>волоф</woName>
+    <xhName>кхоса</xhName>
+    <yiName>ідиш</yiName>
+    <yoName>йоруба</yoName>
+    <zaName>чжуан</zaName>
+    <zhName>китайська</zhName>
+    <zuName>зулуська</zuName>
+  </LanguageNames>
   <Main>
     <Menu>
       <File>
@@ -1029,7 +1169,6 @@ Email: mailto:nikse.dk@gmail.com</AboutText1>
     <BeforeVisualSync>Перед візуальною синхронізацією</BeforeVisualSync>
     <VisualSyncPerformedOnSelectedLines>Візуальну синхронізацію здійснено на вибраних рядках</VisualSyncPerformedOnSelectedLines>
     <VisualSyncPerformed>Візуальну синхронізацію здійснено</VisualSyncPerformed>
-    <ImportThisVobSubSubtitle>Імпортувати цей субтитр VobSub?</ImportThisVobSubSubtitle>
     <FileXIsLargerThan10MB>Файл більший за 10 МБ: {0}</FileXIsLargerThan10MB>
     <ContinueAnyway>Все одно продовжити?</ContinueAnyway>
     <BeforeLoadOf>Перед завантаженням {0}</BeforeLoadOf>
@@ -1354,7 +1493,7 @@ Email: mailto:nikse.dk@gmail.com</AboutText1>
     <CaseSensitive>Чутливий регістр</CaseSensitive>
     <RegularExpression>Регулярний вираз</RegularExpression>
     <LinesFoundX>Знайдено рядків: {0}</LinesFoundX>
-    <Delete>Видалити</Delete>
+    <Remove>Видалити</Remove>
     <Add>&amp;Додати</Add>
     <Update>&amp;Оновити</Update>
     <Enabled>Увімкнено</Enabled>
@@ -1645,7 +1784,6 @@ Email: mailto:nikse.dk@gmail.com</AboutText1>
     <Key>Клав.</Key>
     <TextBox>Текстове поле</TextBox>
     <UpdateShortcut>Оновити</UpdateShortcut>
-    <ShortcutIsNotValid>Комбінація некоректна: {0}</ShortcutIsNotValid>
     <ToggleDockUndockOfVideoControls>Відкріпити/закріпити елементи керування відео</ToggleDockUndockOfVideoControls>
     <CreateSetEndAddNewAndGoToNew>Встановити кінець, додати новий і перейти до нового</CreateSetEndAddNewAndGoToNew>
     <AdjustViaEndAutoStartAndGoToNext>Посунути через встановлення кінцевої позиції і перейти до наступного</AdjustViaEndAutoStartAndGoToNext>
